wescamp.py: Update from add-on server

--- a/The_Legend_Begins/macros/abilities.cfg
+++ b/The_Legend_Begins/macros/abilities.cfg
@@ -556,7 +556,7 @@ _ " This unit is able to stun its enemies, disrupting their zones of control."#e
 
             [object]
                 silent=yes
-                duration=level
+                duration=scenario
 
                 [filter]
                     x,y=$x2,$y2
@@ -610,7 +610,7 @@ _ " This unit is able to stun its enemies, disrupting their zones of control."#e
 
         [object]
             silent=yes
-            duration=level
+            duration=scenario
 
             [filter]
                 x,y=$stunned[$i].x,$stunned[$i].y
