--- a/The_Legend_Begins/macros/deaths.cfg
+++ b/The_Legend_Begins/macros/deaths.cfg
@@ -214,7 +214,7 @@
            id="Faria"
         [/not]
         [not]
-           id="Fairuz"
+           id="Fardin"
         [/not]
         [not]
            id="Affan"
