--- a/The_Legend_Begins/scenarios/episode-1/01_Rebellion.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/01_Rebellion.cfg
@@ -385,7 +385,7 @@
            [then]
               [message]
                   speaker="Maruful"
-                  message= _ "We did it! We killed them! Now, let's get those outer wall guards!"
+                  message= _ "We did it! We have killed them! Now, let's get those outer wall guards!"
               [/message]
               [fire_event]
                   name=victory
