--- a/The_Legend_Begins/scenarios/episode-1/01x_Elders_Decision.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/01x_Elders_Decision.cfg
@@ -61,7 +61,7 @@
        name="start"
        [message]
           speaker="Elder1"
-          message= _ "Congratulations, Jahin, on an attack well orchestrated. The vampires never knew what hit 'em. What brings you away from the festivities of the night?"
+          message= _ "Congratulations, Jahin, on an attack well orchestrated. The vampires never knew what hit 'em. Now, what brings you away from the festivities of the night?"
        [/message]
        [message]
           speaker="Jahin"
