--- a/The_Legend_Begins/scenarios/episode-1/02_The_Goblin_Chief.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/02_The_Goblin_Chief.cfg
@@ -195,7 +195,7 @@
      [/message]
      [message]
         speaker="Jahin"
-        message= _ "You are welcome. We did what we thought was right, but can you tell us one thing?"
+        message= _ "You are welcome. We did what we thought was right. However, can you tell us one thing?"
      [/message]
      [message]
         speaker="Igor"
@@ -305,7 +305,7 @@
      [/message]
      [message]
          speaker="Jahin"
-         message= _ "But that is not a nice thing to do. We could help that goblin. Perhaps, he may give us a reward."
+         message= _ "That is not a nice thing to do. We could help that goblin. Perhaps, he may give us a reward."
      [/message]
      [message]
          speaker="Mahir"
