--- a/The_Legend_Begins/scenarios/episode-1/03_The_Misty_Forest.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/03_The_Misty_Forest.cfg
@@ -368,7 +368,7 @@
       [message]
          speaker="narrator"
          image="units/human-magi/wood-mage.png~RC(magenta>red)"
-         message= _ "Faria is a wood mage. She has a moderate range attack and great forest mobility. But don't leave her unguarded as she cannot defend herself against enemies alone. Her presence allows you to recruit <i>Vine Beasts</i> and <i>Kobolds</i>. She can also summon <i>Wisps</i>, which can gain experience to transform into the other elemental forms."
+         message= _ "Faria is a wood mage. She has a moderate ranged attack and great forest mobility. However, don't leave her unguarded as she cannot defend herself against enemies alone. Her presence allows you to recruit <i>Vine Beasts</i> and <i>Kobolds</i>. She can also summon <i>Wisps</i>, which can gain experience to transform into the other elemental forms."
       [/message]
       [message]
          speaker="narrator"
