--- a/The_Legend_Begins/scenarios/episode-1/04_Approaching_the_Academy.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/04_Approaching_the_Academy.cfg
@@ -454,7 +454,7 @@
     [/filter]
     [message]
         speaker="Jahin"
-        message= _ "We made it!"
+        message= _ "We have reached the Academy!"
     [/message]
     [message]
         speaker="Master Rhodes"
