--- a/The_Legend_Begins/scenarios/episode-1/09_The_Cursed_Emperor.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/09_The_Cursed_Emperor.cfg
@@ -298,7 +298,7 @@
      name="turn 5"
      [message]
         speaker="Jahin"
-        message= _ "So, who is this enemy we face?"
+        message= _ "Who is this enemy we face? Would you care to introduce yourself?"
      [/message]
      [message]
         speaker="Kaliban"
@@ -322,7 +322,7 @@
      [/message]
 
 # Why do I get the feeling that
-# this is a rip-off dialogue of the Avengers?
+# this is a ripped-off dialogue of the Avengers?
 
      [message]
         speaker="Krog"
