--- a/The_Legend_Begins/scenarios/episode-2/44_Evacuation.cfg
+++ b/The_Legend_Begins/scenarios/episode-2/44_Evacuation.cfg
@@ -72,7 +72,7 @@
        controller=ai
        type="Elvish High Lord"
        {GOLD 350 320 300}
-       {INCOME 4 4 4}
+       {INCOME 23 18 13}
        recruit="Elvish Hunter,Elvish Shaman,Elvish Hero,Elvish Acolyte,Elvish Sorceress"
        [ai]
          {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
@@ -114,7 +114,7 @@
        controller=ai
        type="Elvish Sylph"
        {GOLD 350 320 300}
-       {INCOME 4 4 4}
+       {INCOME 23 18 13}
        recruit="Elvish Acolyte,Elvish Sorceress,Faerie Sprite,Elvish Ascetic,Elvish Enchantress,Fire Faerie"
        [ai]
          {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
@@ -156,7 +156,7 @@
        canrecruit=yes
        controller=ai
        [ai]
-         {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+         {AI_SIMPLE_ALWAYS_ASPECT grouping no}
          {AI_SIMPLE_ALWAYS_ASPECT passive_leader no}
          {AI_SIMPLE_ALWAYS_ASPECT aggression "0.8"}
          {AI_SIMPLE_ALWAYS_ASPECT leader_value "300"}
@@ -185,12 +185,12 @@
        id="Evil2"
        {GOLD 250 270 300}
        {INCOME 18 18 18}
-       recruit="Dark Wose,Elder Dark Wose,Ancient Dark Wose,Elvish Warrior,Elvish Ancestor"
+       recruit="Dark Wose,Elder Dark Wose,Ancient Dark Wose,Elvish Warrior Spirit,Elvish Ancestor,Dusk Faerie"
        {FLAG_VARIANT undead}
        canrecruit=yes
        controller=ai
        [ai]
-         {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+         {AI_SIMPLE_ALWAYS_ASPECT grouping no}
          {AI_SIMPLE_ALWAYS_ASPECT passive_leader no}
          {AI_SIMPLE_ALWAYS_ASPECT aggression "0.8"}
          {AI_SIMPLE_ALWAYS_ASPECT leader_value "300"}
@@ -219,12 +219,12 @@
        id="Evil3"
        {GOLD 250 270 300}
        {INCOME 18 18 18}
-       recruit="Dark Wose,Elder Dark Wose,Ancient Dark Wose,Elvish Warrior Spirit,Elvish Ancestor"
+       recruit="Dark Wose,Elder Dark Wose,Ancient Dark Wose,Elvish Warrior Spirit,Elvish Ancestor,Dusk Faerie"
        {FLAG_VARIANT undead}
        canrecruit=yes
        controller=ai
        [ai]
-         {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+         {AI_SIMPLE_ALWAYS_ASPECT grouping no}
          {AI_SIMPLE_ALWAYS_ASPECT passive_leader no}
          {AI_SIMPLE_ALWAYS_ASPECT aggression "0.8"}
          {AI_SIMPLE_ALWAYS_ASPECT leader_value "300"}
@@ -250,15 +250,15 @@
        user_team_name= _ "Dark Woses"
        type="Ancient Dark Wose"
        generate_name=yes
-       id="Evil1"
+       id="Evil4"
        {GOLD 250 270 300}
        {INCOME 18 13 13}
-       recruit="Dark Wose,Elder Dark Wose,Elvish Warrior Spirit,Elvish Ancestor"
+       recruit="Dark Wose,Elder Dark Wose,Elvish Warrior Spirit,Elvish Ancestor,Dusk Faerie"
        {FLAG_VARIANT undead}
        canrecruit=yes
        controller=ai
        [ai]
-         {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+         {AI_SIMPLE_ALWAYS_ASPECT grouping no}
          {AI_SIMPLE_ALWAYS_ASPECT passive_leader no}
          {AI_SIMPLE_ALWAYS_ASPECT aggression "0.8"}
          {AI_SIMPLE_ALWAYS_ASPECT leader_value "300"}
@@ -279,17 +279,17 @@
        side=8
        team_name="evil"
        user_team_name= _ "Dark Woses"
-       type="Elvish Forefather"
+       type="Eventide Dancer"
        generate_name=yes
-       id="Evil1"
+       id="Evil5"
        {GOLD 250 270 300}
        {INCOME 18 13 13}
-       recruit="Dark Wose,Elder Dark Wose,Elvish Warrior Spirit,Elvish Ancestor"
+       recruit="Dark Wose,Elder Dark Wose,Elvish Warrior Spirit,Elvish Ancestor,Dusk Faerie,Night Nymph"
        {FLAG_VARIANT undead}
        canrecruit=yes
        controller=ai
        [ai]
-         {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+         {AI_SIMPLE_ALWAYS_ASPECT grouping no}
          {AI_SIMPLE_ALWAYS_ASPECT passive_leader no}
          {AI_SIMPLE_ALWAYS_ASPECT aggression "0.8"}
          {AI_SIMPLE_ALWAYS_ASPECT leader_value "300"}
@@ -312,7 +312,7 @@
        user_team_name= _ "Dark Woses"
        type="Elvish Forefather"
        generate_name=yes
-       id="Evil1"
+       id="Evil6"
        {GOLD 250 270 300}
        {INCOME 18 13 13}
        recruit="Dark Wose,Elder Dark Wose,Elvish Warrior Spirit,Elvish Ancestor"
@@ -320,7 +320,7 @@
        canrecruit=yes
        controller=ai
        [ai]
-         {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+         {AI_SIMPLE_ALWAYS_ASPECT grouping no}
          {AI_SIMPLE_ALWAYS_ASPECT passive_leader no}
          {AI_SIMPLE_ALWAYS_ASPECT aggression "0.8"}
          {AI_SIMPLE_ALWAYS_ASPECT leader_value "300"}
@@ -348,6 +348,7 @@
        share_map=no
        shroud=yes
        gold=0
+       no_leader=yes
        village_gold=0
        income=-2
        hidden=yes
@@ -359,7 +360,7 @@
 
    [side]
        side=11
-       color=steel_blue
+       color=sky_blue
        team_name="good"
        user_team_name= _ "Defenders"
        controller=ai
@@ -369,6 +370,7 @@
        hidden=yes
        canrecruit=yes
        {GOLD 350 320 300}
+       {INCOME 23 18 13}
        shroud=yes
        {FLAG_VARIANT wood-elvish}
        type="Elvish Champion"
@@ -376,7 +378,7 @@
        generate_name=yes
        x,y=34,20
        {IS_EXPENDABLE_LEADER}
-       recruit="Elvish Shaman,Elvish Acolyte,Elvish Hunter,Elvish Hero"
+       recruit="Elvish Shaman,Elvish Acolyte,Elvish Hunter,Elvish Hero,Elvish Fighter"
        [ai]
           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
           {AI_SIMPLE_ALWAYS_ASPECT passive_leader no}
@@ -400,7 +402,7 @@
        side=12
        team_name="evil"
        user_team_name= _ "Dark Woses"
-       color={COLOR_CYAN}
+       color=khaki
        no_leader=yes
        gold=0
        income=-2
@@ -562,7 +564,7 @@
            [/gold_carryover]
 
            {AI_CONTROLLER_NOTE}
-           note= _ "In every 6 turn interval, 12 civilians will spawn. Defend them from the Dark Woses. Defend co-ordinate (1,19). This is the place where the civilians need to reach."
+           note= _ "In every 6 turn interval, 12 civilians will spawn. Defend them from the Dark Woses. Defend co-ordinate (1,19): the place where the civilians need to reach."
        [/objectives]
 
        [objectives]
