--- a/The_Legend_Begins/scenarios/episode-3/51_Too_Late.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/51_Too_Late.cfg
@@ -27,7 +27,7 @@
     [story]
         [part]
            music="revelation.ogg"
-           story= _ "Shortly after the battle, a funeral was held on the courtyard and Sadia was buried with full honors. Jahin and his friends were asked to give personal speeches about how well they knew Sadia and perhaps the most emotional speech was given by Fardin. He was greatly depressed with her passing and said that he would to do all he could to bring peace to the land, which was Sadia's wish as she had told him one night as a means to start an idle conversation. Galec was unable to attend the funeral as he was tasked with routing the last of the enemy troops."
+           story= _ "Shortly after the battle, a funeral was held on the courtyard and Sadia was buried with full honours. Jahin and his friends were asked to give personal speeches about how well they knew Sadia. Galec was unable to attend the funeral as he was tasked with routing the last of the enemy troops."
         [/part]
 
         [part]
@@ -227,7 +227,7 @@
 
         [ai]
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern "fighter,archer,fighter,fighter,scout"}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression "1.0"}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression "0.8"}
             {AI_SIMPLE_ALWAYS_ASPECT leader_value "3"}
             {AI_SIMPLE_ALWAYS_ASPECT caution "0.2"}          
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat "yes"}      
