--- a/The_Legend_Begins/scenarios/episode-3/52_Clash_of_Armies.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/52_Clash_of_Armies.cfg
@@ -210,9 +210,16 @@
            [goal]
                name="target"
                [criteria]
-                   side=2
+                   side=7
                [/criteria]
                value=100.00
+           [/goal]
+           [goal]
+               name="target"
+               [criteria]
+                   side=2
+               [/criteria]
+               value=10.00
            [/goal]
            [goal]
                name="target"
@@ -303,9 +310,16 @@
            [goal]
                name="target"
                [criteria]
-                   side=2
+                   side=7
                [/criteria]
                value=100.00
+           [/goal]
+           [goal]
+               name="target"
+               [criteria]
+                   side=2
+               [/criteria]
+               value=10.00
            [/goal]
            [goal]
                name="target"
