--- a/The_Legend_Begins/scenarios/episode-3/53x_In_the_Dark_Capital.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/53x_In_the_Dark_Capital.cfg
@@ -114,7 +114,7 @@
                  [/filter]
             [/facing]
 
-            text="<span color='white' font_style='bold'>" + _ "Smash" + "</span>"
+            text="<span color='white' font_style='bold'>" + _ "Smash!" + "</span>"
         [/animate_unit]
 
         [kill]
@@ -138,7 +138,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "<i>(hesitant)</i> Alright, you win. But, if you need any help, we will be right here."
+            message= _ "<i>(hesitant)</i> Alright, you win. However, if you need any help, we shall remain right here."
         [/message]
 
         {STORE_UNIT_VAR id=Fardin level temp_level}
@@ -237,7 +237,7 @@
         [/message]
         [message]
             speaker="Fardin"
-            message= _ "<i>(thinking)</i> They have soldiers based on ranks?! Come on, Fardin. Think!"
+            message= _ "<i>(thinking)</i> They have soldiers based on ranks?! Come on, Fardin, think!"
         [/message]
         [message]
             speaker="Longstride"
@@ -365,11 +365,11 @@
         [/message]
         [message]
             speaker="General1"
-            message= _ "No, Your Excellency. The enemy is far too numerous to defeat. We will need a few more days at least."
+            message= _ "No, Your Excellency. The enemy is far too numerous to defeat. We will need a few more days at most."
         [/message]
         [message]
             speaker="General2"
-            message= _ "But, they are weakening and will have to retreat shortly."
+            message= _ "However, they are weakening and will have to retreat shortly."
         [/message]
         [message]
             speaker="Emperor"
@@ -404,7 +404,7 @@
 
         [message]
             speaker="Fardin"
-            message= _ "<i>(thinking)</i> Boy, these emperors and their servants sure talk a lot of crap! Good thing, Jahin isn't like this, being a lord and all. And now's my chance!"
+            message= _ "<i>(thinking)</i> Boy, these emperors and their servants sure talk a lot of crap! Good thing, Jahin isn't like this, being a lord and all. Now, here's my chance!"
         [/message]
 
         {MOVE_UNIT (id="Fardin") 11 7}
@@ -481,7 +481,7 @@
 
         [message]
             speaker="Fardin"
-            message= _ "<i>(thinking)</i> Crap, I failed the task! But wait, every cloud has a silver lining! Perhaps I can use the princess to get me close to the emperor so that I can kill him. Now, I have to find this princess. I wonder where she could be."
+            message= _ "<i>(thinking)</i> Crap, I failed the task! Wait, every cloud has a silver lining! Perhaps I can use the princess to get me close to the emperor so that I can kill him. Now, I have to find this princess. I wonder where she could be."
         [/message]
 
         [scroll_to_unit]
@@ -554,7 +554,7 @@
         [/message]
         [message]
            speaker="Fardin"
-           message= _ "I was to assassinate the emperor, but it ended in bitter failure. Couldn't even get near him!"
+           message= _ "I was to assassinate the emperor, but it ended in bitter failure: I couldn't even get near him!"
         [/message]
         [message]
            speaker="Shifti"
@@ -695,7 +695,7 @@
 
         [message]
             speaker="Jahin"
-            message= _ "Sorry, knight. These two will be coming with us."
+            message= _ "Sorry, knight. These two shall be coming with us."
         [/message]
 
         [message]
@@ -704,7 +704,7 @@
         [/message]
 
         {GENERIC_UNIT 3 "Orcish Slurbow" 6 4}
-        {GENERIC_UNIT 3 "Orcish Slurbow" 6 5}
+        {GENERIC_UNIT 3 "Orcish Warlord" 6 5}
         {GENERIC_UNIT 3 "Troll Warrior" 5 6}
         {GENERIC_UNIT 3 "Orcish Slurbow" 7 6}
 
