--- a/The_Legend_Begins/scenarios/episode-3/54_A_Path_Must_be_Taken.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/54_A_Path_Must_be_Taken.cfg
@@ -123,7 +123,7 @@
             story={CAPTION ( _ "Kojac")} + _ "Perkins, lead the way!"
         [/part]
         [part]
-            story= _ "Perkins led the army further north until they had reached another river's edge..."
+            story= _ "Perkins led the army further north until they reached another river's edge..."
         [/part]
     [/story]
 
@@ -158,19 +158,21 @@
         {INCOME 2 1 0}
         recruit="Orcish Grunt,Orcish Archer,Wolf Rider,Orcish Assassin,Goblin Cavalry,Troll Whelp,Goblin Pillager,Orcish Warrior"
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.3}
             {AI_SIMPLE_ALWAYS_ASPECT agression 0.7}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement "yes"}
+         
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern "fighter,fighter,archer,scout,archer"}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat "yes"}
-            {ATTACK_DEPTH 4 5 5}
 
-            [protect_unit]
-                 id="Jahin"
-                 radius=3
-                 value=100
-            [/protect_unit]
+            [goal]
+               name="protect_unit"
+               [criteria]
+                   id="Jahin"
+               [/criteria]
+               value=100.00
+               protect_radius=8
+            [/goal]
         [/ai]
     [/side]
 
@@ -188,20 +190,23 @@
         {GOLD 150 120 120}
         {FLAG_VARIANT loyalist}
         {INCOME 2 3 4}
-        recruit="Young Orge,Horseman,Bowman,Fencer,Longbowman,Ogre"
+        recruit="Young Ogre,Horseman,Bowman,Fencer,Longbowman,Ogre"
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {ATTACK_DEPTH 4 5 5}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
+
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.3}
             {AI_SIMPLE_ALWAYS_ASPECT agression 0.7}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement "yes"}
+       
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern "fighter,fighter,archer,archer"}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat "yes"}
 
-            [target]
-                id="Jahin"
-                value=100
-            [/target]
+            [goal]
+               name="target"
+               [criteria]
+                   id="Jahin"
+               [/criteria]
+               value=100.00
+            [/goal]
         [/ai]
 
         [unit]
@@ -219,7 +224,7 @@
         [/filter]
         [message]
             speaker="Kojac"
-            message= _ "Jahin, you go on without me and my army. We will finish this rabble and take the other route!"
+            message= _ "Jahin, proceed without my army and I. We will finish this rabble and take the other route!"
         [/message]
         [message]
             speaker="Jahin"
@@ -246,20 +251,22 @@
         {GOLD 150 120 120}
         {FLAG_VARIANT loyalist}
         {INCOME 2 3 4}
-        recruit="Young Orge,Horseman,Bowman,Fencer,Longbowman,Ogre"
+        recruit="Young Ogre,Horseman,Bowman,Fencer,Longbowman,Ogre"
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.3}
             {AI_SIMPLE_ALWAYS_ASPECT agression 0.7}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement "yes"}
+      
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern "fighter,fighter,archer,archer"}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat "yes"}
-            {ATTACK_DEPTH 4 5 5}
 
-            [target]
-                id="Jahin"
-                value=100
-            [/target]
+            [goal]
+               name="target"
+               [criteria]
+                   id="Jahin"
+               [/criteria]
+               value=100.00
+            [/goal]
         [/ai]
     [/side]
 
@@ -272,7 +279,7 @@
         [/filter]
         [message]
             speaker="Kojac"
-            message= _ "Jahin, you go on without me and my army. We will finish this rabble and take the other route!"
+            message= _ "Jahin, proceed without my army and I. We will finish this rabble and take the other route!"
         [/message]
         [message]
             speaker="Jahin"
@@ -411,20 +418,20 @@
 
         [objectives]
             [objective]
-                description= _ "Defeat either enemy leader."
+                description= _ "Defeat either enemy leader"
                 condition="win"
             [/objective]
 
             [objective]
-                description= _ "Death of Jahin."
+                description= _ "Death of Jahin"
                 condition="lose"
             [/objective]
             [objective]
-                description= _ "Death of Kojac."
+                description= _ "Death of Kojac"
                 condition="lose"
             [/objective]
             [objective]
-                description= _ "Death of any hero unit."
+                description= _ "Death of any hero unit"
                 condition="lose"
             [/objective]
             {TURNS_RUN_OUT}
@@ -435,13 +442,13 @@
             [/gold_carryover]
 
             [note]
-                description= _ "Be cautious when crossing the river: the ice isn't thick enough to support the whole of your army."
+                description= _ "Be cautious when crossing the river: the ice is not thick enough to support the entirety of your army."
             [/note]
         [/objectives]
 
 # Clearing variables starting from the second scenario onwards...
 
-        {CLEAR_VARIABLE ai_controller_finished,ally_side,image_status,new_Fardin_type,new_Fardin_type2,supports_destroyed,temp_i,temp_level,temp_level2,this_ally_txt_img_description,this_enemy_txt_img_description,x2,y2,stored_ally_side}
+        {CLEAR_VARIABLE ai_controller_finished,ally_side,image_status,new_Fardin_type,new_Fardin_type2,supports_destroyed,temp_i,temp_level,temp_level2,this_ally_txt_img_description,this_enemy_txt_img_description,stored_ally_side}
     [/event]
 
     [event] 
@@ -457,11 +464,11 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "Crap! We didn't bring any provisions for the winter!"
+            message= _ "Darn it! We did not bring any provisions for the winter!"
         [/message]
         [message]
             speaker="Perkins"
-            message= _ "Do not worry, lord. I shall go in advance to the two cities under the control of the Rebels and tell them to ready some supplies for you but you have to reach any one of the cities on your own."
+            message= _ "Do not worry, lord, for I shall go in advance to the two cities under the control of the Rebels and tell them to ready some supplies for you. However, you have to reach either one of the cities on your own."
         [/message]
 
         {SCROLL_TO 44 1}
@@ -479,7 +486,7 @@
         [/message]
         [message]
             speaker="Perkins"
-            message= _ "And let me tell about the routes. There are three of them."
+            message= _ "Before I leave, let me tell you about the routes. There are three of them:"
         [/message]
 
         {SCROLL_TO 1 13}
@@ -487,7 +494,7 @@
 
         [message]
             speaker="Perkins"
-            message= _ "That routes leads to the city ruled by Lord Harold, one of the leaders of the rebellion. That path will be least dangerous. You may only encounter wolves and ogres on your journey. But, be cautious though, there may be a yeti roaming about in those lands and he doesn't like trespassers..."
+            message= _ "That routes leads to the city ruled by Lord Harold, one of the leaders of the rebellion. That path will be the least dangerous for you may only encounter wolves and ogres on your journey. However, be cautious though, legend has it that a demigod wolf roams about in those lands and he doesn't like trespassers..."
         [/message]
 
         {SCROLL_TO 44 1}
@@ -503,7 +510,7 @@
 
         [message]
             speaker="Perkins"
-            message= _ "And that last one is the direct route to the capital. The Queen's main army is stationed further ahead, so this course is not an option. Now, I must leave. Best of luck, and may we get the chance to fight alongside one another at the final battle."
+            message= _ "Finally, that last one is the direct route to the capital. The Queen's main army is stationed further ahead and thus, this course is not an option. Now, I must leave. Best of luck, and may we get the chance to fight alongside one another at the final battle."
         [/message]
 
         {MOVE_UNIT (id="Perkins") 24 20}
@@ -518,7 +525,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "We decide which course we shall take and then we kill the royalists who are guarding that route."
+            message= _ "We decide which course we shall take and then we advance, eliminating any foe that obstructs our path."
         [/message]
     [/event]
 
