--- a/The_Legend_Begins/scenarios/episode-3/55a_Lake_of_Ice.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/55a_Lake_of_Ice.cfg
@@ -57,22 +57,17 @@
            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.3}
            {AI_SIMPLE_ALWAYS_ASPECT agression 1.0}
-           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement "yes"}
+       
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat "yes"}
-           {ATTACK_DEPTH 4 5 5}
 
-           [target]
-               id="Jahin"
-               value=5000
-           [/target]
-           [target]
-               side=3
-               value=80
-           [/target]
-           [target]
-               side=5
-               value=0
-           [/target]
+           [goal]
+              name="target"
+              [criteria]
+                  id="Jahin"
+              [/criteria]
+              value=200.00
+          [/goal]
+         
        [/ai]
     [/side]
 
@@ -92,27 +87,17 @@
        [ai]
            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.3}
-           {AI_SIMPLE_ALWAYS_ASPECT agression 0.7}
-           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement "yes"}
+           {AI_SIMPLE_ALWAYS_ASPECT agression 1.0}
+       
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat "yes"}
-           {ATTACK_DEPTH 4 5 5}
 
-           [target]
-               id="Jahin"
-               value=500
-           [/target]
-           [target]
-               side=2
-               value=80
-           [/target]
-           [target]
-               side=3
-               value=80
-           [/target]
-           [target]
-               side=5
-               value=0
-           [/target]
+           [goal]
+              name="target"
+              [criteria]
+                  id="Jahin"
+              [/criteria]
+              value=200.00
+          [/goal]
        [/ai]
     [/side]
 
@@ -132,23 +117,17 @@
        [ai]
            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.3}
-           {AI_SIMPLE_ALWAYS_ASPECT agression 0.7}
-           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement "yes"}
+           {AI_SIMPLE_ALWAYS_ASPECT agression 1.0}
+       
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat "yes"}
-           {ATTACK_DEPTH 4 5 5}
 
-           [target]
-               id="Jahin"
-               value=500
-           [/target]
-           [target]
-               side=3
-               value=80
-           [/target]
-           [target]
-               side=5
-               value=0
-           [/target]
+           [goal]
+              name="target"
+              [criteria]
+                  id="Jahin"
+              [/criteria]
+              value=200.00
+          [/goal]
        [/ai]
     [/side]
 
@@ -157,14 +136,18 @@
     [side]
        side=5
        hidden=yes
-       team_name="boss"
-       user_team_name= _ "Yeti"
-       type="Yeti"
-       id="Yeti"
+       team_name="animals"
+       user_team_name= _ "Wolves"
+       type="Boreal Direwolf"
+       id="Fenrar"
        {FLAG_VARIANT ragged}
-       max_hitpoints=284
-       hitpoints=284
-       name= _ "Tharga-Kar"
+       max_hitpoints=186
+       hitpoints=186
+
+# Originally Fenris, but I had to change it as
+# I cannot include legends from my world
+
+       name= _ "Fenrar"
        x,y=17,9
        overlays="misc/boss-icon.png"
        canrecruit=yes
@@ -188,33 +171,20 @@
             [/object]
        [/modifications]
        controller=ai
-       {ai/aliases/stable_singleplayer.cfg}
        [ai]
            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-           {AI_SIMPLE_ALWAYS_ASPECT caution 0.0}
-           {AI_SIMPLE_ALWAYS_ASPECT aggression 200.0}
-           {AI_SIMPLE_ALWAYS_ASPECT leader_aggression 20000}
-           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement "yes"}
+           {AI_SIMPLE_ALWAYS_ASPECT caution 0.3}
+           {AI_SIMPLE_ALWAYS_ASPECT agression 1.0}
+       
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat "yes"}
-           {TLB_AI_BOSS_TARGETING_ENGINE 5 <<{"Jahin","Sreeyoshee","Fardin","Shifti","Kraag"}>>}
 
-           # Why should be the Yeti be pissed off at Jahin for?
-           [target]
-               id="Jahin"
-               value=5000
-           [/target]
-           [target]
-               side=2
-               value=10
-           [/target]
-           [target]
-               side=3
-               value=10
-           [/target]
-           [target]
-               side=2
-               value=10
-           [/target]
+           [goal]
+              name="target"
+              [criteria]
+                  id="Jahin"
+              [/criteria]
+              value=200.00
+          [/goal]
        [/ai]
     [/side]
 
@@ -240,33 +210,30 @@
         [/recall]
 
         {VARIABLE damsel_rescued no}
-        {VARIABLE yeti_killed no}
+        {VARIABLE wolf_killed no}
 
         [objectives]
             [objective]
-                description= _ "Find and move Jahin to the marker. (19,1)"
+                description= _ "Find and move Jahin to the marker (19,1)"
                 condition="win"
             [/objective]
             [objective]
-                description= _ "Rescue the damsel in distress. (17,10)"
+                description= _ "Rescue the damsel in distress (17,10)"
                 condition="win"
             [/objective]
             [objective]
                 {BONUS_OBJECTIVE_CAPTION}
-                description= _ "Defeat the Yeti if you encounter it by any chance."
+                description= _ "Defeat the demigod wolf if you encounter it by any chance"
                 condition="win"
             [/objective]
 
             [objective]
-                description= _ "Death of Jahin."
+                description= _ "Death of Jahin"
                 condition="lose"
             [/objective]
+            
             [objective]
-                description= _ "Death of Kojac."
-                condition="lose"
-            [/objective]
-            [objective]
-                description= _ "Death of any hero unit."
+                description= _ "Death of any hero unit"
                 condition="lose"
             [/objective]
             {TURNS_RUN_OUT}
@@ -285,10 +252,8 @@
         {CLEAR_VARIABLE weakened_ice}
     [/event]
 
-# Defeating a Yeti in its natural habitat?!
-# Jahin and Fardin are crazy!
 
-    {ON_SIGHTING 1 1 (id="Yeti") (
+    {ON_SIGHTING 1 1 (id="Fenrar") (
         [print]
             text= _ "Enemy boss sighted!"
             red,green,blue=255,127,0
@@ -304,11 +269,11 @@
         [/message]
         [message]
             speaker="Shifti"
-            message= _ "The Yeti, I presume."
+            message= _ "The demigod wolf, I presume."
         [/message]
         [message]
             speaker="Krog"
-            message= _ "White giant bigger than Krog but Krog not afraid! Krog smash white giant!"
+            message= _ "White wolf pretty. Krog smash white wolf!"
         [/message]
         [message]
             speaker="Fardin"
@@ -319,16 +284,16 @@
         name="die"
 
         [filter]
-           id="Yeti"
+           id="Fenrar"
         [/filter]
 
         [message]
            speaker="Fardin"
-           message= _ "Yahoo! We killed the abomination! Now, quickly take its fur!"
+           message= _ "Yahoo! We have killed the abomination! Now, quickly take its fur!"
         [/message]
         [message]
            speaker="Jahin"
-           message= _ "<i>(surprised)</i> Why would we want to do that for?"
+           message= _ "<i>(surprised)</i> Why should we do that?"
         [/message]
         [message]
            speaker="Fardin"
@@ -339,7 +304,7 @@
            message= _ "Fine..."
         [/message]
 
-        {VARIABLE yeti_killed yes}
+        {VARIABLE wolf_killed yes}
         # There's a good reward if you kill this creature
     [/event]
 
@@ -352,7 +317,7 @@
     {ON_SIGHTING 3 1 (side=3) (
         [message]
            speaker="Fardin"
-           message= _ "Ogres?"
+           message= _ "Ogres?!"
         [/message]
         [message]
            speaker="Jahin"
@@ -438,7 +403,7 @@
 
         [message]
             speaker="Sreeyoshee"
-            message= _ "Thank you, for rescuing me. My name is Sreeyoshee and I am a researcher."
+            message= _ "Thank you for rescuing me, stranger. My name is Sreeyoshee and I am a researcher."
         [/message]
         [message]
             speaker="Fardin"
@@ -446,19 +411,19 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "You're welcome. We only did what we thought was right but how did you end up here?"
+            message= _ "You're welcome. We only did what we thought was right, but how did you end up here?"
         [/message]
         [message]
             speaker="Sreeyoshee"
-            message= _ "Well, I was exploring this region for a rare species of wolves, but the Yeti caught me and imprisoned me here."
+            message= _ "Well, I was exploring this region for a rare species of wolves, but the ogres caught me and imprisoned me here."
         [/message]
         [message]
             speaker="Shifti"
-            message= _ "Why did the Yeti do that for?"
+            message= _ "Why did the ogres do that for?"
         [/message]
         [message]
             speaker="Sreeyoshee"
-            message= _ "I have no idea. Perhaps he wanted companionship."
+            message= _ "I honestly have no idea."
         [/message]
         [message]
             speaker="Jahin"
@@ -470,7 +435,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "My name is Jahin. I'm the lord of New Genesis, a city far away from here. <i>(pointing at Fardin)</i> That is Fardin, <i>(pointing at Kraag)</i> Kraag, <i>(pointing at Krog)</i> Krog, <i>(pointing at Shifti)</i> and Shifti. They are my comrades in the war which this land is currently in."
+            message= _ "My name is Jahin. I'm the lord of New Genesis, a city far away from here. <i>(pointing at Fardin)</i> This is Fardin, <i>(pointing at Kraag)</i> Kraag, <i>(pointing at Krog)</i> Krog, <i>(pointing at Shifti)</i> and Shifti. They are my comrades in the war which this land is currently in."
         [/message]
         [message]
             speaker="Sreeyoshee"
@@ -490,7 +455,7 @@
             message= _ "Quit complaining! The sooner we reach that city the better. Now, let's march! Warmth and food awaits!"
         [/message]
 
-        {DELAY 1000}
+        {DELAY 660}
 
         [message]
             speaker="narrator"
@@ -604,7 +569,7 @@
        name="enemies defeated"
        [message]
            speaker="Jahin"
-           message= _ "It won't take long for them to regroup and attack us. We must make haste!"
+           message= _ "It shall not take long for them to regroup and attack us. We must make haste!"
        [/message]
     [/event]
 
