--- a/The_Legend_Begins/scenarios/episode-3/55b_The_Long_March.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/55b_The_Long_March.cfg
@@ -53,20 +53,25 @@
         {INCOME 2 3 4}
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.9}
+           
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-            {ATTACK_DEPTH 3 4 5}
 
-            [target]
-                id="Jahin"
-                value=5000
-            [/target]
-            [target]
-                side=1
-                value=4000
-            [/target]
+            [goal]
+               name="target"
+               [criteria]
+                   id="Jahin"
+               [/criteria]
+               value=1000.00
+            [/goal]
+            [goal]
+               name="target"
+               [criteria]
+                   side=1
+               [/criteria]
+               value=500.00
+            [/goal]
         [/ai]
 
         {GENERIC_UNIT 2 "Great Ogre" 4 36}{GUARDIAN}
@@ -88,20 +93,25 @@
         {INCOME 2 3 4}
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.9}
+           
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-            {ATTACK_DEPTH 3 4 5}
 
-            [target]
-                id="Jahin"
-                value=5000
-            [/target]
-            [target]
-                side=1
-                value=4000
-            [/target]
+            [goal]
+               name="target"
+               [criteria]
+                   id="Jahin"
+               [/criteria]
+               value=1000.00
+            [/goal]
+            [goal]
+               name="target"
+               [criteria]
+                   side=1
+               [/criteria]
+               value=500.00
+            [/goal]
         [/ai]
     [/side]
 
@@ -120,20 +130,25 @@
         {INCOME 2 3 4}
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.9}
+           
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-            {ATTACK_DEPTH 3 4 5}
 
-            [target]
-                id="Jahin"
-                value=5000
-            [/target]
-            [target]
-                side=1
-                value=4000
-            [/target]
+            [goal]
+               name="target"
+               [criteria]
+                   id="Jahin"
+               [/criteria]
+               value=1000.00
+            [/goal]
+            [goal]
+               name="target"
+               [criteria]
+                   side=1
+               [/criteria]
+               value=500.00
+            [/goal]
         [/ai]
     [/side]
 
@@ -156,20 +171,25 @@
         {INCOME 2 3 4}
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.9}
+           
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-            {ATTACK_DEPTH 3 4 5}
 
-            [target]
-                id="Jahin"
-                value=5000
-            [/target]
-            [target]
-                side=1
-                value=4000
-            [/target]
+            [goal]
+               name="target"
+               [criteria]
+                   id="Jahin"
+               [/criteria]
+               value=1000.00
+            [/goal]
+            [goal]
+               name="target"
+               [criteria]
+                   side=1
+               [/criteria]
+               value=500.00
+            [/goal]
         [/ai]
     [/side]
 
@@ -192,20 +212,25 @@
         {FLAG_VARIANT ragged}
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.9}
+           
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-            {ATTACK_DEPTH 3 4 5}
 
-            [target]
-                id="Jahin"
-                value=5000
-            [/target]
-            [target]
-                side=1
-                value=4000
-            [/target]
+            [goal]
+               name="target"
+               [criteria]
+                   id="Jahin"
+               [/criteria]
+               value=1000.00
+            [/goal]
+            [goal]
+               name="target"
+               [criteria]
+                   side=1
+               [/criteria]
+               value=500.00
+            [/goal]
         [/ai]
     [/side]
 
@@ -219,20 +244,25 @@
         controller=ai
         
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.9}
+           
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-            {ATTACK_DEPTH 3 4 5}
 
-            [target]
-                id="Jahin"
-                value=5000
-            [/target]
-            [target]
-                side=1
-                value=4000
-            [/target]
+            [goal]
+               name="target"
+               [criteria]
+                   id="Jahin"
+               [/criteria]
+               value=1000.00
+            [/goal]
+            [goal]
+               name="target"
+               [criteria]
+                   side=1
+               [/criteria]
+               value=500.00
+            [/goal]
         [/ai]
     [/side]
 
@@ -262,25 +292,25 @@
 
         [objectives]
             [objective]
-                description= _ "Find and move Jahin to the marker. (15,1)"
+                description= _ "Find and move Jahin to the marker (15,1)"
                 condition="win"
             [/objective]
             [objective]
-                description= _ "Rescue the damsel in distress. (6,37)"
+                description= _ "Rescue the damsel in distress (6,37)"
                 condition="win"
             [/objective]
             [objective]
                 {BONUS_OBJECTIVE_CAPTION}
-                description= _ "Defeat all enemy leaders."
+                description= _ "Defeat all enemy leaders"
                 condition="win"
             [/objective]
 
             [objective]
-                description= _ "Death of Jahin."
+                description= _ "Death of Jahin"
                 condition="lose"
             [/objective]
             [objective]
-                description= _ "Death of any hero unit."
+                description= _ "Death of any hero unit"
                 condition="lose"
             [/objective]
             {TURNS_RUN_OUT}
@@ -394,7 +424,7 @@
 
         [message]
             speaker="Sreeyoshee"
-            message= _ "Thank you, for rescuing me. My name is Sreeyoshee and I am a researcher."
+            message= _ "Thank you for rescuing me, stranger. My name is Sreeyoshee and I am a researcher."
         [/message]
         [message]
             speaker="Fardin"
@@ -402,7 +432,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "You're welcome. We only did what we thought was right but how did you end up here?"
+            message= _ "You're welcome. We only did what we thought was right but, how did you end up here?"
         [/message]
         [message]
             speaker="Sreeyoshee"
@@ -418,7 +448,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "It's Jahin. I'm the lord of New Genesis, a city far away from here. <i>(pointing at Fardin)</i> That is Fardin, <i>(pointing at Kraag)</i> Kraag, <i>(pointing at Krog)</i> Krog, <i>(pointing at Shifti)</i> and Shifti. They are my comrades in the war which this land is currently in."
+            message= _ "My name is Jahin and I am the lord of New Genesis, a city far away from here. <i>(pointing at Fardin)</i> This is Fardin, <i>(pointing at Kraag)</i> Kraag, <i>(pointing at Krog)</i> Krog, <i>(pointing at Shifti)</i> and Shifti. They are my comrades in the war which this land is currently in."
         [/message]
         [message]
             speaker="Sreeyoshee"
@@ -535,7 +565,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "I know the dangers of such a path, and that is why I chose it. This journey will strengthen our army greatly."
+            message= _ "I know the dangers of such a path, and that is why I have chosen it. This journey will strengthen our army considerably."
         [/message]
         [message]
             speaker="Fardin"
@@ -546,7 +576,7 @@
             message= _ "Krog smash ogres!"
         [/message]
 
-        {DELAY 1000}
+        {DELAY 660}
 
         [message]
             speaker="narrator"
