--- a/The_Legend_Begins/scenarios/episode-3/56a_Cold_Steel.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/56a_Cold_Steel.cfg
@@ -50,20 +50,26 @@
         {FLAG_VARIANT loyalist}
         recruit="Spearman,Bowman,Fencer,Horseman,Pikeman,Longbowman,Duelist"
         [ai]
-           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
-           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+        
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-           {ATTACK_DEPTH 3 4 5}
+          
 
-           [target]
-               id="Lord Harold"
-               value=200
-           [/target]
-           [target]
-               id="Jahin"
-               value=50
-           [/target]
+           [goal]
+              name="target"
+              [criteria]
+                  id="Lord Harold"
+              [/criteria]
+              value=200.00
+           [/goal]
+           [goal]
+              name="target"
+              [criteria]
+                  id="Jahin"
+              [/criteria]
+              value=50.00
+          [/goal]
         [/ai]
     [/side]
 
@@ -81,20 +87,26 @@
         {FLAG_VARIANT loyalist}
         recruit="Spearman,Bowman,Fencer,Horseman,Pikeman,Longbowman,Duelist"
         [ai]
-           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
-           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+        
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-           {ATTACK_DEPTH 3 4 5}
+          
 
-           [target]
-               id="Lord Harold"
-               value=200
-           [/target]
-           [target]
-               id="Jahin"
-               value=50
-           [/target]
+           [goal]
+              name="target"
+              [criteria]
+                  id="Lord Harold"
+              [/criteria]
+              value=200.00
+           [/goal]
+           [goal]
+              name="target"
+              [criteria]
+                  id="Jahin"
+              [/criteria]
+              value=50.00
+          [/goal]
         [/ai]
     [/side]
 
@@ -115,9 +127,9 @@
            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.8}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.4}
-           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+          
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-           {ATTACK_DEPTH 5 5 6}
+
 
            [avoid]
                x=41-60
@@ -149,16 +161,18 @@
         {FLAG_VARIANT ragged}
         recruit="Young Ogre,Ogre,Goblin Cavalry,Goblin Impaler,Wolf Rider,Goblin Knight,Goblin Rouser,Goblin Spearman,Goblin Pillager,Direwolf Rider,Great Ogre"
         [ai]
-           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-           {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
-           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
+           {AI_SIMPLE_ALWAYS_ASPECT aggression 0.99}
+        
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-           {ATTACK_DEPTH 3 4 5}
-
-           [target]
-               id="Jahin"
-               value=5000
-           [/target]
+      
+           [goal]
+              name="target"
+              [criteria]
+                  id="Jahin"
+              [/criteria]
+              value=100.00
+          [/goal]
         [/ai]
     [/side]
 
@@ -234,19 +248,19 @@
         
         [objectives]
             [objective]
-                 description= _ "Defend the city until the enemy is compelled to retreat."
+                 description= _ "Defend the city until the enemy is compelled to retreat"
                  condition="win"
             [/objective]
             [objective]
-                 description= _ "Death of Jahin."
+                 description= _ "Death of Jahin"
                  condition="lose"
             [/objective]
             [objective]
-                 description= _ "Death of a hero unit."
+                 description= _ "Death of a hero unit"
                  condition="lose"
             [/objective]
             [objective]
-                 description= _ "Death of the allied leader."
+                 description= _ "Death of the allied leader"
                  condition="lose"
             [/objective]
 
@@ -266,7 +280,7 @@
         [scroll_to_unit]
             id="Lord Harold"
         [/scroll_to_unit]
-        {DELAY 1000}
+        {DELAY 660}
 
         [message]
             speaker="Lord Harold"
@@ -278,7 +292,7 @@
         [/message]
         [message]
             speaker="Lord Harold"
-            message= _ "Then, are you the allies that Perkins told us about?"
+            message= _ "Are you the allies that Perkins told us about?"
         [/message]
         [message]
             speaker="Jahin"
@@ -302,7 +316,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "Sure. I'm always open to suggestions."
+            message= _ "Sure. I am always open to suggestions."
         [/message]
         [message]
             speaker="Shifti"
@@ -314,7 +328,7 @@
         [/message]
         [message]
             speaker="Sreeyoshee"
-            message= _ "Jahin, I'm a healer so I should fight at the front as well. But, please be sure to protect me as I'm not very good when it comes to close combat."
+            message= _ "Jahin, I'm a healer so I should fight at the front as well. However, please be sure to protect me as I'm not very good when it comes to close combat."
         [/message]
         [message]
             speaker="Fardin"
@@ -322,7 +336,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "Wait, let me guess. Is it about who can kill the most enemies?"
+            message= _ "Wait, let me speculate. Is it about who can kill the most enemies?"
         [/message]
         [message]
             speaker="Fardin"
@@ -340,7 +354,7 @@
             speaker="narrator"
             image="wesnoth-icon.png"
             caption= _ "Fardin's Challenge Bonus"
-            message= _ "Whenever Jahin or any other hero unit kills an enemy unit, the hero unit will be healed by 4 hit-points (as well being cured of <i>poison</i> or <i>slow</i>). This can occur in both attacking and retaliating."
+            message= _ "Whenever Jahin or any other hero unit kills an enemy unit, the hero unit will be healed by 4 hit-points (as well being cured of <i>poison</i> or <i>slow</i>). This can occur during both attacking and retaliating."
         [/message]
     [/event]
 
@@ -382,7 +396,7 @@
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "Oh, no! The city has fallen! We've failed!"
+            message= _ "Oh, no! The city has fallen! We have failed!"
         [/message]
         [endlevel]
             result="defeat"
@@ -410,15 +424,15 @@
             message= _ "Attack! We've almost weaken them!"
         [/message]
         [message]
-            speaker="Jahin"
-            message= _ "Hey, you weakling! Come out and fight!"
+            speaker="Fardin"
+            message= _ "Hey, you! Come out and fight!"
         [/message]
         [message]
             speaker="General2"
             message= _ "Why should I fight? My job is to lead."
         [/message]
         [message]
-            speaker="Jahin"
+            speaker="Fardin"
             message= _ "Yeah, you're probably right. I could easily beat you in the melee..."
         [/message]
         [message]
@@ -490,7 +504,7 @@
 
         [message]
             speaker="Jahin"
-            message= _ "We did it! The enemy's retreating!"
+            message= _ "We did it! The enemy is retreating!"
         [/message]
         
         {DELAY 2000}
@@ -501,7 +515,7 @@
 
         [message]
             speaker="Lord Harold"
-            message= _ "<i>(after reading the note)</i> It's a message from Princess Afrin. She says that we must march for the capital as soon as possible for the final battle is at hand. My friends, take rest, for after a day, we shall begin our march."
+            message= _ "<i>(after reading the note)</i> It's a message from Princess Azrin. She says that we must march for the capital as soon as possible for the final battle is at hand. My friends, take rest. We shall begin our march within a day."
         [/message]
         [message]
             speaker="Fardin"
