--- a/The_Legend_Begins/scenarios/episode-3/56b_Enemies_in_the_Mist.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/56b_Enemies_in_the_Mist.cfg
@@ -142,8 +142,8 @@
         {GENERIC_UNIT 2 "Owl" 25 23}
 
         [message]
-            speaker="Afrin"
-            message= _ "<i>(after reading the note)</i> It's a message from Lord Harold. He says that we must march for the capital as soon as possible for the final battle is at hand. My friends, take rest, for after a day, we shall begin our march."
+            speaker="Azrin"
+            message= _ "<i>(after reading the note)</i> It's a message from Lord Harold. He says that we must march for the capital as soon as possible for the final battle is at hand. My friends, take rest. We shall begin our march within a day."
         [/message]
         [message]
             speaker="Fardin"
@@ -165,12 +165,12 @@
             message= _ "Look, everyone! I see the city that Perkins told us about in yonder direction!"
         [/message]
         [scroll_to_unit]
-            id="Afrin"
+            id="Azrin"
         [/scroll_to_unit]
         {DELAY 1000}
 
         [message]
-            speaker="Afrin"
+            speaker="Azrin"
             message= _ "More enemies? Well, we shall never surrender!"
         [/message]
         [message]
@@ -178,20 +178,20 @@
             message= _ "Wait, Your Highness, we're not foes! We're here to aid you!"
         [/message]
         [message]
-            speaker="Afrin"
-            message= _ "Then, are you the allies that Perkins told me about?"
+            speaker="Azrin"
+            message= _ "Are you the allies that Perkins told me about?"
         [/message]
         [message]
             speaker="Jahin"
             message= _ "We are."
         [/message]
         [message]
-            speaker="Afrin"
-            message= _ "Thank heavens! We have your supplies ready for you, but we must defend the city from the forces of my evil aunt first."
+            speaker="Azrin"
+            message= _ "Thank heavens! We have your supplies ready for you but, we must defend the city from the forces of my evil aunt first."
         [/message]
         [message]
             speaker="Fardin"
-            message= _ "Alright. "
+            message= _ "Alright."
         [/message]
     [/event]
 
@@ -215,7 +215,7 @@
         [/message]
         [message]
             speaker="Sreeyoshee"
-            message= _ "Jahin, I'm a healer so I should fight at the front but, please protect me as I'm not very good when it comes to close combat."
+            message= _ "Jahin, I'm a healer so I should fight at the front. However, please protect me as I'm not very good when it comes to close combat."
         [/message]
         [message]
             speaker="Fardin"
@@ -223,7 +223,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "Wait, let me guess. Is it about who can kill the most enemies?"
+            message= _ "Wait, let me speculate. Is it about who can kill the most enemies?"
         [/message]
         [message]
             speaker="Fardin"
@@ -254,7 +254,7 @@
             message= _ "Ready to surrender yet, wench?"
         [/message]
         [message]
-            speaker="Afrin"
+            speaker="Azrin"
             message= _ "Go back to the hole you once crawled out from, puppet, for we shall never give in!"
         [/message]
     [/event]
@@ -266,20 +266,20 @@
             message= _ "Princess, don't mind me asking but why are you rebelling against your aunt?"
         [/message]
         [message]
-            speaker="Afrin"
-            message= _ "She's an abomination. She ascended to the throne using the vilest of treacheries and she is also known for practising the dark arts."
+            speaker="Azrin"
+            message= _ "She's an abomination for she had ascended to the throne using the vilest of treacheries and she is also known for practising the dark arts."
         [/message]
         [message]
             speaker="Sreeyoshee"
             message= _ "A necromancer? There are undead about?"
         [/message]
         [message]
-            speaker="Afrin"
+            speaker="Azrin"
             message= _ "Yes, that is what she calls her creations."
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "I have dealt with undead before. As the trolls are with us, they won't be much of a problem..."
+            message= _ "I have dealt with undead before. As the trolls are with us, they shall not be much of a problem..."
         [/message]
     [/event]
 
@@ -308,8 +308,8 @@
         side=2
         team_name="good"
         user_team_name= _ "Rebels"
-        id="Afrin"
-        name= _ "female^Afrin"
+        id="Azrin"
+        name= _ "female^Azrin"
         type="Prowler"
         controller=ai
         fog=yes
@@ -330,15 +330,18 @@
            {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.8}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.4}
-           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+       
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-           {ATTACK_DEPTH 5 5 6}
+      
 
-           [protect_unit]
-              id="Afrin"
-              value=5000
-              radius=8
-           [/protect_unit]
+           [goal]
+              name="protect_unit"
+              [criteria]
+                  id="Azrin"
+              [/criteria]
+              value=500.00
+              protect_radius=8
+           [/goal]
           
            [avoid]
               x=1-15,1-54,40-54
@@ -392,11 +395,11 @@
     [event]
         name="die"
         [filter]
-            id="Afrin"
+            id="Azrin"
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "We have failed to protect the princess! Now, we will never get a new ally..."
+            message= _ "We have failed to protect the princess! Now, we shall never get a new ally..."
         [/message]
         [endlevel]
             result="defeat"
@@ -417,15 +420,18 @@
         [ai]
             {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.2}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+          
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {ATTACK_DEPTH 5 5 6}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
+     
 
-            [target]
-                id="Afrin"
-                value=500
-            [/target]
+            [goal]
+              name="target"
+              [criteria]
+                  id="Azrin"
+              [/criteria]
+              value=500.00
+           [/goal]
         [/ai]
     [/side]
 
@@ -443,15 +449,17 @@
         [ai]
             {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.2}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+      
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {ATTACK_DEPTH 5 5 6}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
 
-            [target]
-                id="Afrin"
-                value=500
-            [/target]
+            [goal]
+              name="target"
+              [criteria]
+                  id="Azrin"
+              [/criteria]
+              value=500.00
+           [/goal]
         [/ai]
     [/side]
 
@@ -469,15 +477,18 @@
         [ai]
             {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.2}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
             {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {ATTACK_DEPTH 5 5 6}
+     
 
-            [target]
-                id="Afrin"
-                value=500
-            [/target]
+            [goal]
+              name="target"
+              [criteria]
+                  id="Azrin"
+              [/criteria]
+              value=500.00
+              protect_radius=8
+           [/goal]
         [/ai]
     [/side]
 
@@ -495,15 +506,19 @@
         [ai]
             {AI_SIMPLE_ALWAYS_ASPECT aggression 1.0}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.2}
-            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_movement yes}
+  
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat yes}
             {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {ATTACK_DEPTH 5 5 6}
+     
 
-            [target]
-                id="Afrin"
-                value=500
-            [/target]
+            [goal]
+              name="target"
+              [criteria]
+                  id="Azrin"
+              [/criteria]
+              value=500.00
+              protect_radius=8
+           [/goal]
         [/ai]
     [/side]
 
@@ -762,11 +777,11 @@
 
         [objectives]
             [objective]
-                 description= _ "Defend the city until the enemy is compelled to retreat."
+                 description= _ "Defend the city until the enemy is compelled to retreat"
                  condition="win"
             [/objective]
             [objective]
-                 description= _ "Kill $units_to_kill enemy units."
+                 description= _ "Kill $units_to_kill enemy units"
                  condition="win"
             [/objective]
             [objective]
@@ -774,11 +789,11 @@
                  condition="lose"
             [/objective]
             [objective]
-                 description= _ "Death of the allied leader."
+                 description= _ "Death of the allied leader"
                  condition="lose"
             [/objective]
             [objective]
-                 description= _ "Death of any hero unit."
+                 description= _ "Death of any hero unit"
                  condition="lose"
             [/objective]
             {TURNS_RUN_OUT}
