--- a/The_Legend_Begins/scenarios/episode-3/57_Battle_of_the_Red_Snow.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/57_Battle_of_the_Red_Snow.cfg
@@ -52,7 +52,9 @@
         type="Necromancer"
         gender=female
         [modifications]
+                # Giving the necromancer a light-greyish coat
                 [object]
+                    silent=yes
                     [effect]
                         apply_to=image_mod
                         replace="PAL(E3DCDC,C9C3BE,999188,6E675C,514A3F>C1C1C1,919191,646464,444444,080808)~PAL(889880,506858,283028>7C999B,4C546C,262C31)"
@@ -73,12 +75,10 @@
         #endif
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
             {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-
-            {ATTACK_DEPTH 5 5 6}
         [/ai]
     [/side]
 
@@ -94,8 +94,8 @@
             message= _ "You may have defeated me, but my master will devour your souls!"
         [/message]
         [message]
-            speaker="Jahin"
-            message= _ "And who the bloody hell is your master?"
+            speaker="Fardin"
+            message= _ "Who the bloody hell is your master?"
         [/message]
         [message]
             speaker="narrator"
@@ -116,7 +116,7 @@
 
         [message]
             speaker="Jahin"
-            message= _ "We've triumphed!"
+            message= _ "We have triumphed!"
         [/message]
 
         [endlevel]
@@ -143,12 +143,10 @@
         recruit="Pikeman,Longbowman,Spearman,Bowman,Horseman"
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
             {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-
-            {ATTACK_DEPTH 5 5 6}
         [/ai]
     [/side]
 
@@ -169,12 +167,10 @@
         recruit="Pikeman,Longbowman,Spearman,Bowman,Horseman"
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
             {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-
-            {ATTACK_DEPTH 5 5 6}
         [/ai]
     [/side]
 
@@ -195,12 +191,11 @@
         recruit="Pikeman,Longbowman,Spearman,Bowman,Horseman"
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
             {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
 
-            {ATTACK_DEPTH 5 5 6}
         [/ai]
     [/side]
 
@@ -221,12 +216,10 @@
         recruit="Pikeman,Longbowman,Spearman,Bowman,Horseman"
 
         [ai]
-            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
+            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
             {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-
-            {ATTACK_DEPTH 5 5 6}
         [/ai]
     [/side]
 
@@ -244,11 +237,9 @@
         recruit="Orcish Warrior,Orcish Grunt,Orcish Crossbowman,Orcish Archer,Goblin Pillager,Goblin Lancer,Troll"
         [ai]
             {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-
-            {ATTACK_DEPTH 5 5 6}
        [/ai]
     [/side]
 
@@ -268,11 +259,9 @@
 
        [ai]
             {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-
-            {ATTACK_DEPTH 5 5 6}
        [/ai]
 
     [/side]
@@ -293,11 +282,9 @@
 
        [ai]
             {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-            {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
+            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
             {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
             {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-
-            {ATTACK_DEPTH 5 5 6}
        [/ai]
 
     [/side]
@@ -309,7 +296,7 @@
        no_leader=yes
        team_name="bad"
        hidden=yes
-       color=yellow
+       color=orchid
        user_team_name= _ "Guards"
        {FLAG_VARIANT loyalist}
        controller=ai
@@ -318,16 +305,11 @@
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.00}
 
            [goal]
-               [criteria]
-                   id="Queen Ysura"
-               [/criteria]
-               value=2000
-           [/goal]
-           [goal]
+               name="target"
                [criteria]
                    id="Jahin"
                [/criteria]
-               value=1000
+               value=1000.00
            [/goal]
        [/ai]
 
@@ -369,7 +351,7 @@
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "Oh, no! We're outnumbered now! We've failed!"
+            message= _ "Oh, no! We are outnumbered now! We have failed!"
         [/message]
         [endlevel]
             result="defeat"
@@ -379,11 +361,11 @@
     [event]
         name="die"
         [filter]
-            id="Afrin"
+            id="Azrin"
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "We have failed to protect the princess! Now, we will never get a new ally..."
+            message= _ "We have failed to protect the princess! Now, we shall never get a new ally..."
         [/message]
         [endlevel]
             result="defeat"
@@ -452,7 +434,7 @@
 
                 {TELEPORT_UNIT (id="Jahin") 53 37}
 
-                # Princess Afrin
+                # Princess Azrin
 
                 [terrain]
                     x=53,53,53,52,52,54,54
@@ -467,8 +449,8 @@
 
                 {NOTRAIT_UNIT 9 "Prowler" 53 42}
                 [+unit]
-                    id="Afrin"
-                    name= _ "Afrin"
+                    id="Azrin"
+                    name= _ "Azrin"
                     canrecruit=yes
                 [/unit]
                 [modify_side]
@@ -497,20 +479,20 @@
 
         [objectives]
             [objective]
-                description= _ "Defeat the Queen."
+                description= _ "Defeat the Queen"
                 condition="win"
             [/objective]
 
             [objective]
-                description= _ "Death of Jahin."
+                description= _ "Death of Jahin"
                 condition="lose"
             [/objective]
             [objective]
-                description= _ "Death of any hero unit."
+                description= _ "Death of any hero unit"
                 condition="lose"
             [/objective]
             [objective]
-                description= _ "Death of any allied leader."
+                description= _ "Death of any allied leader"
                 condition="lose"
             [/objective]
             {TURNS_RUN_OUT}
@@ -557,8 +539,8 @@
 
                 {NOTRAIT_UNIT 9 "Prowler" 53 42}
                 [+unit]
-                    id="Afrin"
-                    name= _ "Princess Afrin"
+                    id="Azrin"
+                    name= _ "Princess Azrin"
                     canrecruit=yes
                 [/unit]
 
@@ -580,7 +562,7 @@
                     message= _ "Prepare to die, royalist scum!"
                 [/message]
                 [message]
-                    speaker="Afrin"
+                    speaker="Azrin"
                     message= _ "Aunt Ysura, your end is near!"
                 [/message]
                 [message]
@@ -702,7 +684,7 @@
            [then]
                [message]
                    speaker="Jahin"
-                   message= _ "So this is their capital? It looks heavily fortified."
+                   message= _ "This is their capital? It looks heavily fortified."
                [/message]
                [message]
                    speaker="Lord Harold"
@@ -743,10 +725,10 @@
            [then]
                [message]
                    speaker="Jahin"
-                   message= _ "So this is their capital? It looks heavily fortified."
+                   message= _ "This is their capital? It looks heavily fortified."
                [/message]
                [message]
-                   speaker="Afrin"
+                   speaker="Azrin"
                    message= _ "Jahin, try to divert the enemy away from the outer defences and delay them until reinforcements arrive."
                [/message]
                [message]
@@ -774,7 +756,7 @@
                    message= _ "As you wish, my queen."
                [/message]
                [message]
-                   speaker="Afrin"
+                   speaker="Azrin"
                    message= _ "Your oppressive reign will come to an end soon, aunt Ysura. Let the snows be covered in blood for we shall not rest until you are dead!"
                [/message]
            [/then]
@@ -783,7 +765,7 @@
        [message]
            speaker="narrator"
            image="wesnoth-icon.png"
-           message= _ "This is the last scenario where you will get to recruit <i>orcs</i>. As for the ones in your recall list, they will be available in scenarios where Jahin will be your leader unit."
+           message= _ "This is the last scenario where you will get to recruit <i>orcs</i>. As for the ones in your recall list, they will be available as recalls."
        [/message]
     [/event]
 
@@ -813,7 +795,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Do not worry, Sreeyoshee. I will protect you with my life, if it needs be."
+           message= _ "Do not worry, Sreeyoshee. I shall protect you with my life, if it needs be."
        [/message]
        [message]
            speaker="Sreeyoshee"
@@ -823,7 +805,7 @@
        [object]
            id=arcane_melee_jahin
            name= _ "Enchantment of Light"
-           duration=level
+           duration=scenario
            [filter]
                id="Jahin"
            [/filter]
@@ -861,7 +843,7 @@
        [/message]
        [message]
            speaker="Shifti"
-           message= _ "Kaliban? I remember reading about him. He was an ancient enemy of New Anaktoron. So, you destroyed that monstrosity?"
+           message= _ "Kaliban? I remember reading about him. He was an ancient enemy of New Anaktoron. You have destroyed that monstrosity?"
        [/message]
        [message]
            speaker="Sreeyoshee"
@@ -869,7 +851,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Yes, we obliterated Kaliban. And, sorry, the Sapphire was destroyed during the spell in which we used it to destroy the undead legions."
+           message= _ "Yes, we have obliterated Kaliban and, sorry, the Sapphire was destroyed during the spell in which we had used it to destroy the undead legions."
        [/message]
 
        # Made an edit here
