--- a/The_Legend_Begins/scenarios/episode-3/57x_01_Coronation_of_the_New_Queen.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/57x_01_Coronation_of_the_New_Queen.cfg
@@ -16,7 +16,7 @@
    [story]
        [part]
            music="underground.ogg"
-           story= _ "Princess Afrin had achieved her goal - she reclaimed her heirloom. Now that she was the reigning monarch, she spent the next three days restoring order to her capital city. After that task, her coronation ceremony commenced with Jahin and his friends being the chief guests of honour..."
+           story= _ "Princess Azrin had achieved her goal - she had reclaimed her kingdom. Now that she was the reigning monarch, she spent the next three days restoring order to her capital city. After that task, her coronation ceremony commenced with Jahin and his friends being the chief guests of honour..."
        [/part]
    [/story]
 
@@ -34,6 +34,7 @@
        canrecruit=yes
        [unit]
           id="Kojac"
+          side=1
           name= _ "High Chief Kojac"
           type="Orcish Slurbow"
           unrenameable=yes
@@ -51,8 +52,8 @@
        team_name="good"
        user_team_name= _ "White Realm"
        {FLAG_VARIANT long}
-       id="Afrin"
-       name= _ "Afrin"
+       id="Azrin"
+       name= _ "Azrin"
        type="Prowler"
        gold=0
        income=-2
@@ -95,7 +96,7 @@
 
        [objectives]
            [objective]
-               description= _ "Pick up the Sword of Power with either Jahin or Fardin."
+               description= _ "Pick up the Shield with either Jahin or Fardin."
                condition="win"
            [/objective]
 
@@ -157,10 +158,10 @@
        {DELAY 100}
        [message]
            speaker="Lord Harold"
-           message= _ "Afrin of the Prowler clan, kneel"
+           message= _ "Azrin of the Prowler clan, kneel"
        [/message]
        [message]
-           speaker="Afrin"
+           speaker="Azrin"
            message= _ "<i>(kneels)</i>"
        [/message]
        [message]
@@ -168,15 +169,15 @@
            message= _ "Do you accept the responsibilities of the kingdom and its people?"
        [/message]
        [message]
-           speaker="Afrin"
+           speaker="Azrin"
            message= _ "I do."
        [/message]
        [message]
            speaker="Lord Harold"
-           message= _ "Then, rise Queen Afrin of the White Realm."
+           message= _ "Then, rise Queen Azrin of the White Realm."
        [/message]
        [message]
-           speaker="Afrin"
+           speaker="Azrin"
            message= _ "<i>(ascends)</i>"
        [/message]
        [message]
@@ -185,7 +186,7 @@
            message= _ "As the young queen rose to her feet, several cheers of approval erupted from the gathered crowd of soldiers."
        [/message]
        [message]
-           speaker="Afrin"
+           speaker="Azrin"
            message= _ "As your queen, I shall lead our nation to a better future. This is a promise I make to all of you."
        [/message]
        [message]
@@ -194,7 +195,7 @@
            message= _ "Several more cheers of approval erupted from the crowd."
        [/message]
        [message]
-           speaker="Afrin"
+           speaker="Azrin"
            message= _ "Jahin, on behalf of all of White Realm, I thank you for your invaluable aid in my battle and would like to reward you in a way. Now, what award would you like?"
        [/message]
        [message]
@@ -202,7 +203,7 @@
            message= _ "Your Majesty, we are part of an alliance that is trying to rid this land of evil, wherever it may hide, and we would like your queendom to join us."
        [/message]
        [message]
-           speaker="Afrin"
+           speaker="Azrin"
            message= _ "We would gladly join your alliance."
        [/message]
        [message]
@@ -210,7 +211,7 @@
            message= _ "Thank you, Your Majesty. Now, we would like to ask for your aid."
        [/message]
        [message]
-           speaker="Afrin"
+           speaker="Azrin"
            message= _ "My aid?"
        [/message]
        [message]
@@ -218,12 +219,12 @@
            message= _ "Our city of New Genesis is currently in need of soldiers to help in its defence against the Chaos Empire - the evilest enemy we had ever faced. So, would you be kind enough to spare a garrison or two to help us?"
        [/message]
        [message]
-           speaker="Afrin"
+           speaker="Azrin"
            message= _ "Jahin, I'm sorry to say that I can't do that. This civil war has weakened us greatly and my queendom is still ravaged by ogres and goblins. But, I can still give an item that may help in your battles."
        [/message]
        [message]
-           speaker="Afrin"
-           message= _ "<i>(Holding a small stone with engraved sigils)</i> This is the Resurrection Stone and it has been under our care for many generations. This stone has the magical ability to revive any being who had died of an unnatural death. But, unfortunately, you can only revive two beings with it and its powers will vanish after a day of being used. We kept it, hoping to use it during our darkest hour but, you should have it."
+           speaker="Azrin"
+           message= _ "<i>(Holding a small stone with engraved sigils)</i> This is the Resurrection Stone and it has been under our care for many generations. This stone has the magical ability to revive any being who had died of an unnatural death. However, you can only revive two beings with it and its powers will vanish after a day of being used. We kept it, hoping to use it during our darkest hour but, you should have it."
        [/message]
        [message]
            speaker="Jahin"
@@ -231,19 +232,19 @@
        [/message]
 
        [if]
-           {VARIABLE_CONDITIONAL yeti_killed equals yes}
+           {VARIABLE_CONDITIONAL wolf_killed equals yes}
            [then]
                [message]
                    speaker="Lord Harold"
-                   message= _ "Jahin, there was an Yeti inhabiting the regions south of my city. Did you encounter that creature?"
+                   message= _ "Jahin, there was a legendary beast inhabiting the regions south of my city. Did you encounter that creature?"
                [/message]
                [message]
                    speaker="Jahin"
-                   message= _ "Yes, and <i>(showing the yeti's fur)</i> we conquered that abominable snow monster as well."
+                   message= _ "Yes, and <i>(showing the Wolf's fur)</i> we have conquered that abominable snow wolf as well."
                [/message]
                [message]
                    speaker="Lord Harold"
-                   message= _ "Then allow me to reward you with some gold, for that beast was nuisance to this land."
+                   message= _ "Then allow me to reward you with some gold, for that beast was a nuisance to this land."
                [/message]
                [gold]
                    side=1
@@ -259,10 +260,10 @@
                [/message]
                [message]
                    speaker="Jahin"
-                   message= _ "Thank you, Lord Harold. And now it is time for my soldiers and I to leave for we have stayed away from our home far too long."
+                   message= _ "Thank you, Lord Harold. Now, it is time for my soldiers and I to leave for we have stayed away from our home far too long."
                [/message]
                [message]
-                   speaker="Afrin"
+                   speaker="Azrin"
                    message= _ "I wish you a safe journey, Jahin."
                [/message]
                [endlevel]
@@ -276,15 +277,15 @@
            [/then]
        [/if]
        [if]
-           {VARIABLE_CONDITIONAL yeti_killed equals no}
+           {VARIABLE_CONDITIONAL wolf_killed equals no}
            [then]
                [message]
                    speaker="Lord Harold"
-                   message= _ "Jahin, there was an Yeti inhabiting the regions south of my city. Did you encounter that creature?"
+                   message= _ "Jahin, there was a legendary beast inhabiting the regions south of my city. Did you encounter that creature?"
                [/message]
                [message]
                    speaker="Jahin"
-                   message= _ "We did encounter that snow monster, but we failed to kill it."
+                   message= _ "We did encounter that being, but we had failed to slay it."
                [/message]
                [message]
                    speaker="Lord Harold"
@@ -295,7 +296,7 @@
                    message= _ "Now, it is time for my soldiers and I to leave for we have stayed away from our home far too long."
                [/message]
                [message]
-                   speaker="Afrin"
+                   speaker="Azrin"
                    message= _ "I wish you a safe journey, Jahin."
                [/message]
                [endlevel]
@@ -313,29 +314,29 @@
            {VARIABLE_CONDITIONAL ogres_killed equals yes}
            [then]
                [message]
-                   speaker="Afrin"
+                   speaker="Azrin"
                    message= _ "Jahin, your army marched straight through ogre lands. Were you able to defeat all of them?"
                [/message]
                [message]
                    speaker="Jahin"
-                   message= _ "As a matter of fact, we did. We slaughtered every last one of them."
+                   message= _ "As a matter of fact, we did. We have slaughtered every last one of them."
                [/message]
                [item]
                   x,y=9,10
                   image="items/buckler.png"
                [/item]
                [message]
-                   speaker="Afrin"
+                   speaker="Azrin"
                    message= _ "Then take this shield as a reward. It has a magical power of improving the resistance of its bearer against physical weapons."
                [/message]
                [message]
                    speaker="Jahin"
-                   message= _ "Thank you, Queen Afrin. I shall select a warrior worthy to wield this weapon..."
+                   message= _ "Thank you, Queen Azrin. I shall select a warrior worthy to wield this weapon..."
                [/message]
                [message]
                    speaker="narrator"
                    image="wesnoth-icon.png"
-                   message= _ "Due to the present composition of your army, only Jahin and Fardin can wield this item. Since, Jahin's resistances are already similar to the bonus granted by the shield, Fardin would be a better choice but the decision is ultimately yours to make..."
+                   message= _ "Due to the present composition of your army, only Jahin and Fardin can wield this item. Since Jahin's resistances are already similar to the bonus granted by the shield, Fardin would be a better choice but the decision is ultimately yours to make..."
                [/message]
            [/then]
        [/if]
@@ -343,7 +344,7 @@
            {VARIABLE_CONDITIONAL ogres_killed equals no}
            [then]
                [message]
-                   speaker="Afrin"
+                   speaker="Azrin"
                    message= _ "Jahin, your army marched straight through ogre lands. Were you able to defeat all of them?"
                [/message]
                [message]
@@ -351,15 +352,15 @@
                    message= _ "No, they were too numerous to be defeated."
                [/message]
                [message]
-                   speaker="Afrin"
-                   message= _ "I would given you a powerful magical item if you cleanse those lands, but we can do it ourselves when we have regained our strength."
+                   speaker="Azrin"
+                   message= _ "I would given you a powerful magical item if you had cleansed those lands, but we can do it ourselves when we have regained our strength."
                [/message]
                [message]
                    speaker="Jahin"
                    message= _ "Now, it is time for my soldiers and I to leave for we have stayed away from our home far too long."
                [/message]
                [message]
-                   speaker="Afrin"
+                   speaker="Azrin"
                    message= _ "I wish you a safe journey, Jahin."
                [/message]
                [endlevel]
@@ -444,7 +445,7 @@
                                 message= _ "Now, it is time for my soldiers and I to leave for we have stayed away from our home far too long."
                             [/message]
                             [message]
-                                speaker="Afrin"
+                                speaker="Azrin"
                                 message= _ "I wish you a safe journey, Jahin."
                             [/message]
 
@@ -480,7 +481,7 @@
                     [then]
                         [message]
                             speaker=narrator
-                            message= _ "Only Jahin and Fardin can wield this shield."
+                            message= _ "Only Jahin and Fardin are capable of wielding this shield..."
                             image="wesnoth-icon.png"
                             side_for=1
                         [/message]
@@ -500,7 +501,7 @@
         [clear_variable]
             name=item_shield_picked_up
         [/clear_variable]
-        {CLEAR_VARIABLE yeti_killed,ogres_killed}
+        {CLEAR_VARIABLE wolf_killed,ogres_killed}
     [/event] 
 
 [/scenario] 
