--- a/The_Legend_Begins/scenarios/episode-3/57x_02_A_Tragic_Surprise.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/57x_02_A_Tragic_Surprise.cfg
@@ -12,10 +12,10 @@
     [story]
         [part]
             music="underground.ogg"
-            story= _ "Before leaving the capital, Jahin warned Queen Afrin of the eventual attack of the Chaos Empire, hoping that his new allies could prepare themselves for the inevitable. Jahin and his friends, along with Kojac's army, then began the long journey to New Genesis. Sreeyoshee also joined the party as she wanted to help out in any way she could." 
+            story= _ "Before leaving the capital, Jahin warned Queen Azrin of the eventual attack of the Chaos Empire, hoping that his new allies could prepare themselves for the inevitable. Jahin and his friends, along with Kojac's army, then began the long journey to New Genesis. Sreeyoshee also joined the party as she wanted to help out in any way she could." 
         [/part]
         [part]
-            story= _ "A few weeks later, they arrived in Gartok - Kojac's capital city - and from there Jahin and his small group of soldiers departed for New Genesis; reaching their destination within the following fortnight. While walking towards the keep, our heroes noticed that there were dwarven soldiers and citizens present alongside the general populace. Thinking that something must be wrong, Jahin and the rest quickened their pace. Unbeknownst to them all, a tragic surprise awaited them..."
+            story= _ "A few weeks later, they arrived in Gartok and from there, Jahin and his small group of soldiers departed for New Genesis; reaching their destination within the following fortnight. While walking towards the keep, our heroes noticed that there were dwarven soldiers and citizens present alongside the general populace. Thinking that something must be wrong, Jahin and the rest quickened their pace. Unbeknownst to them all, a tragic surprise awaited them..."
         [/part]
     [/story]
 
@@ -122,13 +122,22 @@
    [event]
        name="start"
 
+       [store_unit]
+           [filter]
+               id="Kojac"
+           [/filter]
+           kill=yes
+           variable="stored.kojac"
+       [/store_unit]
+       {CLEAR_VARIABLE stored.kojac}
+
        [message]
            speaker="Affan"
            message= _ "Jahin! You have finally returned! What took you so long?"
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "We decimated the Legion's northern city and then we made an assassination attempt on their emperor, but that wasn't successful. We rescued <i>(pointing towards Shifti)</i> Shifti - the emperor's daughter. After that, we were approached for aid by the Princess of the White Realm. Seeing that as an opportunity to gain a new ally, we agreed to help. During our journey in that frigid paradise, we rescued <i>(pointing towards Sreeyoshee)</i> Sreeyoshee. Then we defeated the queen, and placed the rightful heiress in her throne. Finally, we realised how much time we had spent there and returned home."
+           message= _ "We decimated the Legion's northern city and then we made an assassination attempt on their emperor, but that was not successful. However, we rescued <i>(pointing towards Shifti)</i> Shifti - the emperor's daughter. After that, we were approached for aid by the Princess of the White Realm. Seeing that as an opportunity to gain a new ally, we agreed to help. During our journey in that frigid paradise, we rescued <i>(pointing towards Sreeyoshee)</i> Sreeyoshee. Then we defeated the queen, and placed the rightful heiress in her throne. Finally, we realised how much time we had spent there and returned home."
        [/message]
        [message]
            speaker="Fardin"
@@ -136,11 +145,11 @@
        [/message]
        [message]
            speaker="Ashhab"
-           message= _ "Oh, I almost forgot about that. A few weeks after you left, a terrible disaster struck us. The Chaos Empire had managed to conquer the dwarven kingdom."
+           message= _ "Oh, I almost forgot about that. A few weeks after you left, a terrible disaster struck us. The Chaos Empire had managed to conquer the dwarven kingdom!"
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "That is horrible! Please continue..."
+           message= _ "That is dreadful! Please continue..."
        [/message]
        [message]
            speaker="Ashhab"
@@ -148,7 +157,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "I can't believe that our enemies have managed to conquer one of our strongest allies. I shall speak with the leader immediately. Where is he or she?"
+           message= _ "I cannot believe that our enemies have managed to conquer one of our strongest allies. I shall speak with this leader immediately. Where is he or she?"
        [/message]
        
        [message]
@@ -157,7 +166,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Before we begin, I like to offer my condolences for the lost of your brethren who gave their lives to allow you and the rest of the dwarven populace to escape. Now, what did you want to wish to speak to me about?"
+           message= _ "Before we begin, I like to offer my condolences for the lost of your brethren who had sacrificed their lives to allow you and the rest of the dwarven populace to escape. Now, what did you want to wish to speak to me about?"
        [/message]
        [message]
            speaker="Leader"
@@ -169,7 +178,7 @@
        [/message]
        [message]
            speaker="Leader"
-           message= _ "With us out of the way, they are vulnerable now as the hordes of Chaos now have a direct route to them. But, we sent a scout to warn them, so that they may take some defensive measures..."
+           message= _ "Lord Jahin, with us out of the way, the elves are now vulnerable as the hordes of Chaos have a direct route towards them. However, we had sent a scout to warn them, so that they may take some defensive measures..."
        [/message]
        [message]
            speaker="Jahin"
