--- a/The_Legend_Begins/scenarios/episode-3/58_Drastic_Measures.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/58_Drastic_Measures.cfg
@@ -36,7 +36,7 @@
 
        [message]
            speaker="Jahin"
-           message= _ "Yahoo! We're victorious! We have defeated our enemies and have a strong mountainous barrier surrounding New Genesis!"
+           message= _ "Yahoo! We are victorious! We have defeated our enemies and have a strong mountainous barrier surrounding our city!"
        [/message]
        [message]
            speaker="Fardin"
@@ -44,7 +44,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "We continue with the repairs and construct fortifications at the entrances. Position all able soldiers at the entrances. We shall decide our next course of actions later on because right now, I need to rest."
+           message= _ "We continue with the repairs and construct fortifications at the entrances. Affan, Position all able soldiers at the entrances. We shall decide our next course of actions later on because right now, I need to rest."
        [/message]
        [endlevel]
            result="victory"
@@ -90,11 +90,11 @@
        [objectives]
            side=1
            [objective]
-               description= _ "Jahin must defeat Marshal Rygar."
+               description= _ "Jahin must defeat Marshal Rygar"
                condition="win"
            [/objective]
            [objective]
-               description= _ "Position Ashhab, Sreeyoshee and three dwarven runic smiths in their respective hexes."
+               description= _ "Position Ashhab, Sreeyoshee and three dwarven runic smiths in their respective hexes"
                condition="win"
            [/objective]
            [objective]
@@ -107,19 +107,19 @@
            [/objective]
 
            [objective]
-               description= _ "Death of Jahin."
+               description= _ "Death of Jahin"
                condition="lose"
            [/objective]
            [objective]
-               description= _ "Death of any hero unit."
+               description= _ "Death of any hero unit"
                condition="lose"
            [/objective]
            [objective]
-               description= _ "Marshal Rygar is destroyed by a unit other than Jahin."
+               description= _ "Marshal Rygar is destroyed by a unit other than Jahin"
                condition="lose"
            [/objective]
            [objective]
-               description= _ "Destruction of any village."
+               description= _ "Destruction of any village"
                condition="lose"
            [/objective]
            {TURNS_RUN_OUT}
@@ -150,15 +150,15 @@
                condition="lose"
            [/objective]
            [objective]
-               description= _ "Death of any hero unit."
+               description= _ "Death of any hero unit"
                condition="lose"
            [/objective]
            [objective]
-               description= _ "Marshal Rygar is destroyed by a unit other than Jahin."
+               description= _ "Marshal Rygar is destroyed by a unit other than Jahin"
                condition="lose"
            [/objective]
            [objective]
-               description= _ "Destruction of any village."
+               description= _ "Destruction of any village"
                condition="lose"
            [/objective]
            {TURNS_RUN_OUT}
@@ -213,26 +213,26 @@
           text= _ "Dwarven Rune Smith" 
        [/label]
        
-       {GENERIC_UNIT 10 "Drake Arbiter" 30 28}
-       {GENERIC_UNIT 10 "Saurian Ambusher" 36 30}
-       {GENERIC_UNIT 10 "Saurian Oracle" 37 31}
-       {GENERIC_UNIT 10 "Drake Burner" 36 31}
+       {LOYAL_UNIT 10 "Drake Arbiter" 30 28}
+       {LOYAL_UNIT 10 "Swordsman" 36 30}
+       {LOYAL_UNIT 10 "Saurian Oracle" 37 31}
+       {LOYAL_UNIT 10 "Drake Burner" 36 31}
 
-       {GENERIC_UNIT 10 "Sky Drake" 23 30}
-       {GENERIC_UNIT 10 "Dwarvish Fighter" 21 33}
-       {GENERIC_UNIT 10 "Dwarvish Stalwart" 22 33}
-       {GENERIC_UNIT 10 "Drake Fighter" 19 45}
+       {LOYAL_UNIT 10 "Sky Drake" 23 30}
+       {LOYAL_UNIT 10 "Dwarvish Fighter" 21 33}
+       {LOYAL_UNIT 10 "Dwarvish Stalwart" 22 33}
+       {LOYAL_UNIT 10 "Drake Fighter" 19 45}
 
-       {GENERIC_UNIT 10 "Orcish Warrior" 17 47}
-       {GENERIC_UNIT 10 "Orcish Archer" 20 49}
-       {GENERIC_UNIT 10 "Troll Whelp" 19 50}
-       {GENERIC_UNIT 10 "Wolf Rider" 20 50}
+       {LOYAL_UNIT 10 "Orcish Warrior" 17 47}
+       {LOYAL_UNIT 10 "Orcish Archer" 20 49}
+       {LOYAL_UNIT 10 "Troll Whelp" 19 50}
+       {LOYAL_UNIT 10 "Wolf Rider" 20 50}
 
-       {GENERIC_UNIT 10 "Goblin Pillager" 36 49}
-       {GENERIC_UNIT 10 "Goblin Lancer" 40 47}
-       {GENERIC_UNIT 10 "Orcish Warlord" 37 52}
-       {GENERIC_UNIT 10 "Saurian Soothsayer" 38 51}
-       {GENERIC_UNIT 10 "Saurian Ambusher" 38 52}
+       {LOYAL_UNIT 10 "Goblin Pillager" 36 49}
+       {LOYAL_UNIT 10 "Shock Trooper" 40 47}
+       {LOYAL_UNIT 10 "Orcish Warlord" 37 52}
+       {LOYAL_UNIT 10 "Saurian Soothsayer" 38 51}
+       {LOYAL_UNIT 10 "Saurian Ambusher" 38 52}
 
        {CLEAR_VARIABLE ai_controller_finished,ally_side,temp_i,this_ally_txt_img_description,this_enemy_txt_img_description,stored,stored_ally_side}
     [/event]
@@ -277,12 +277,11 @@
 
        [ai]
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern (fighter,fighter,mixed fighter,archer)}
-          {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
-          {AI_SIMPLE_ALWAYS_ASPECT caution 1.00}
+          {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
+          {AI_SIMPLE_ALWAYS_ASPECT caution 0.10}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
 
-          {ATTACK_DEPTH 5 5 6}
        [/ai]
     [/side]
 
@@ -298,7 +297,7 @@
         {VARIABLE_OP objectives_completed add 1}
         [message]
             speaker="unit"
-            message= _ "You have proven yourself to be quite the adversary, Jahin of New Genesis. Take this for you have earned it <i>(The skeletal warlord gives Jahin a strange-looking stone,before crumbling to dust)</i>."
+            message= _ "You have proven yourself to be quite the adversary, Jahin of New Genesis. Take this for you have earned it <i>(The skeletal warlord gives Jahin a strange-looking stone, before crumbling to dust)</i>."
         [/message]
         [message]
             speaker="Jahin"
@@ -376,12 +375,10 @@
        {INCOME 4 5 6}
        recruit="Ghoul,Walking Corpse,Ghost,Vampire Bat,Necrophage,Shadow,Ghast"
        [ai]
-          {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
-          {AI_SIMPLE_ALWAYS_ASPECT caution 1.00}
+          {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
+          {AI_SIMPLE_ALWAYS_ASPECT caution 0.10}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
-
-          {ATTACK_DEPTH 5 5 6}
        [/ai]
     [/side]
 
@@ -406,12 +403,10 @@
        {INCOME 4 5 6}
        recruit="Brazier Imp,Kobold,Stone Golem,Dark Wose,Elder Dark Wose"
        [ai]
-          {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
-          {AI_SIMPLE_ALWAYS_ASPECT caution 1.00}
+          {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
+          {AI_SIMPLE_ALWAYS_ASPECT caution 0.10}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
-
-          {ATTACK_DEPTH 5 5 6}
        [/ai]
     [/side]
 
@@ -432,12 +427,10 @@
        {INCOME 4 5 6}
        recruit="Draug,Banebow,Death Baron,Chocobone"
        [ai]
-          {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
-          {AI_SIMPLE_ALWAYS_ASPECT caution 1.00}
+          {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
+          {AI_SIMPLE_ALWAYS_ASPECT caution 0.10}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
-
-          {ATTACK_DEPTH 5 5 6}
        [/ai]
     [/side]
 
@@ -459,12 +452,10 @@
        {INCOME 4 5 6}
        recruit="Brazier Imp,Furnace Beast,Kobold,Vine Beast,Vine Tiger,Ice Crab"
        [ai]
-          {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
-          {AI_SIMPLE_ALWAYS_ASPECT caution 1.00}
+          {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
+          {AI_SIMPLE_ALWAYS_ASPECT caution 0.10}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
-
-          {ATTACK_DEPTH 5 5 6}
        [/ai]
     [/side]
 
@@ -486,12 +477,10 @@
        {INCOME 4 5 6}
        recruit="Bone Shooter,Skeleton Archer,Skeleton,Skeleton Rider,Revenant,Banebow,Death Baron"
        [ai]
-          {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
-          {AI_SIMPLE_ALWAYS_ASPECT caution 1.00}
+          {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
+          {AI_SIMPLE_ALWAYS_ASPECT caution 0.10}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
-
-          {ATTACK_DEPTH 5 5 6}
        [/ai]
     [/side]
 
@@ -514,12 +503,10 @@
        {INCOME 4 5 6}
        recruit="Howling Darkness,Cloud of Gloom,Rash One,Unhatched,Life Thief,Soul Snatcher,Black Cat,Jinx Beast"
        [ai]
-          {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
-          {AI_SIMPLE_ALWAYS_ASPECT caution 1.00}
+          {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
+          {AI_SIMPLE_ALWAYS_ASPECT caution 0.10}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
-
-          {ATTACK_DEPTH 5 5 6}
        [/ai]
     [/side]
 
@@ -540,12 +527,10 @@
        {INCOME 4 5 6}
        recruit="Revenant,Deathblade,Draug,Chocobone"
        [ai]
-          {AI_SIMPLE_ALWAYS_ASPECT aggression 1.00}
-          {AI_SIMPLE_ALWAYS_ASPECT caution 1.00}
+          {AI_SIMPLE_ALWAYS_ASPECT aggression 0.90}
+          {AI_SIMPLE_ALWAYS_ASPECT caution 0.10}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping no}
-
-          {ATTACK_DEPTH 5 5 6}
        [/ai]
     [/side]
 
@@ -561,7 +546,7 @@
         no_leader=yes
         {FLAG_VARIANT long}
         controller=human
-        color="yellow"
+        color="rust"
     [/side]
 
     
@@ -609,14 +594,12 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "Who is this enemy we face?!"
+            message= _ "Who is this enemy we face?"
         [/message]
-
-# The Dark Lands will be explored in Hero of Irdya...
 
         [message]
             speaker="Rygar"
-            message= _ "I am Rygar, lord of the dead and son of Mor-Inal, the Dark Elementalist. My father has sent me to destroy you and I shall carry out his instructions. So, prepare to die!"
+            message= _ "I am Rygar, lord of the dead and general of Mor-Inal, the Dark Elementalist. My master has sent me to destroy you and I shall carry out his instructions. Thus, prepare to die!"
         [/message]
         [message]
             speaker="Fardin"
@@ -624,7 +607,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "Organise the defences as best as we can. There are too many of them, so offensive tactics would be futile."
+            message= _ "Organise the defences as best as we can. There are far too many of them and thus, offensive tactics would be futile."
         [/message]
         [message]
             speaker="Shifti"
@@ -645,7 +628,7 @@
         [object]
            id=arcane_melee_jahin2
            name= _ "Enchantment of Light"
-           duration=level
+           duration=scenario
            [filter]
                id="Jahin"
            [/filter]
@@ -677,7 +660,7 @@
        [object]
            id=arcane_melee_Fardin
            name= _ "Enchantment of Light"
-           duration=level
+           duration=scenario
            [filter]
                id="Fardin"
            [/filter]
@@ -696,7 +679,7 @@
        [object]
            id=arcane_melee_shifti
            name= _ "Enchantment of Light"
-           duration=level
+           duration=scenario
            [filter]
                id="Shifti"
            [/filter]
@@ -714,30 +697,27 @@
 
        [message]
            speaker="Sreeyoshee"
-           message= _ "Good luck, Jahin. If I wasn't a celibate, I would have given you a kiss."
+           message= _ "Good luck, Jahin."
        [/message]
        [message]
            speaker="Jahin"
            message= _ "Thank you, Sreeyoshee."
        [/message]
-       [message]
-           speaker="Fardin"
-           message= _ "<i>(thinking)</i> Crap! Why do beautiful women always have to be celibates?"
-       [/message]
+     
        [message]
            speaker="Jahin"
-           message= _ "Fardin, how about we fight side by side this time?"
+           message= _ "Krog, how about we fight side by side this time?"
        [/message]
        [message]
-           speaker="Fardin"
-           message= _ "Hell yeah!"
+           speaker="Krog"
+           message= _ "Krog smash skeletons! Krog help Jahin smash skeletons!"
        [/message]
 
-       {DELAY 1000}
+       {DELAY 600}
 
        [message]
            speaker="Ashhab"
-           message= _ "<i>(reading the Book of Ancients)</i> Yes! I have found a solution to our problem!"
+           message= _ "<i>(reading the Book of Ancients)</i> I have found a solution to our current predicament!"
        [/message]
        [message]
            speaker="Fardin"
@@ -745,7 +725,7 @@
        [/message]
        [message]
            speaker="Ashhab"
-           message= _ "The problem is the fact that our enemies can attack us from almost every direction. And, the solution is to restrict them by creating a barrier of impenetrable mountains around our city."
+           message= _ "The problem is the fact that our enemies can attack us from almost every direction. The solution is to restrict them by creating a barrier of impenetrable mountains around our city."
        [/message]
        [message]
            speaker="Affan"
@@ -777,7 +757,7 @@
        [/message]
        [message]
            speaker="Ashhab"
-           message= _ "Okay, we need to position the magi at specific locations around New Genesis and protect them from enemies. <i>(giving the book to Sreeyoshee)</i> Sreeyoshee, you have to stay at the centre and recite the spell whilst the other rune-smiths and I will have to be elsewhere."
+           message= _ "Okay, we need to position the magi at specific locations around New Genesis and protect them from enemies. <i>(giving the book to Sreeyoshee)</i> Sreeyoshee, you have to stay at the centre and recite the spell whilst the other rune-smiths and I will have to be positioned elsewhere."
        [/message]
        [message]
            speaker="Sreeyoshee"
@@ -811,7 +791,6 @@
 
     [event]
         name="turn 2"
-        {DELAY 1000}
 
        [message]
            speaker="Fardin"
@@ -830,15 +809,15 @@
            message= _ "<i>(lifts the Resurrection Stone)</i> Let's try it."
        [/message]
 
-       {NARRATOR_MESSAGE ( _ "<i>Nothing happens.</i>")}
+       {NARRATOR_MESSAGE ( _ "<i>Nothing happens...</i>")}
 
        [message]
            speaker="Jahin"
-           message= _ "Why isn't it working?"
+           message= _ "Hey, why isn't it working?"
        [/message]
        [message]
            speaker="Sreeyoshee"
-           message= _ "Perhaps it requires some sort of incantation to make it work. This book might have it. But, we shall have to do that later, as we are currently busy."
+           message= _ "Perhaps it requires some sort of incantation to make it work. This book might have it. However, we shall have to do that later as we are currently preoccupied."
        [/message]
        
     [/event]
@@ -900,7 +879,7 @@
                         speaker="Sreeyoshee"
                         message= _ "<i>(starts to cast the spell)</i>"
                     [/message]
-                    {NARRATOR_MESSAGE ( _ "Ashhab, Sreeyoshee, and the three dwarven rune-smiths must stay in their respective positions for 4 turns until the barrier is completed. After that, they can move freely again...")}
+                    {NARRATOR_MESSAGE ( _ "Ashhab, Sreeyoshee, and the three dwarven rune-smiths must stay in their respective positions for 4 turns until the barrier is completed. After that, they are at liberty to move again...")}
                     [message]
                        speaker="Jahin"
                        message= _ "The barrier has started to rise! Keep the enemy at bay!"
@@ -930,7 +909,7 @@
                     [harm_unit]
                        [filter]
                            side=1
-                           type="Cavalryman,Dragoon,Cavalier,Cavalry,Heavy Cavalry,Cataphract"
+                           type="Cavalryman, Dragoon, Cavalier, Cavalry, Heavy Cavalry, Cataphract, Cavalry Archer, Archer Knight, Heavy Infantryman, Shock Trooper, Iron Mauler, Titanium Decimator"
                            [filter_location]
                                 terrain=Mm
                            [/filter_location]
@@ -950,7 +929,7 @@
                     [/message]
                     [message]
                        speaker="Jahin"
-                       message= _ "We have to rely on infantry from now on as the mountains are restricting the movement of our cavalry troops."
+                       message= _ "We have to rely on light infantry from now on as the mountains are restricting the movement of our cavalry and heavy infantry troops."
                     [/message]
                  [/then]
    
@@ -1013,7 +992,7 @@
                     [/message]
                     [message]
                        speaker="Jahin"
-                       message= _ "Now, our enemies will have little chances to attack us."
+                       message= _ "Now, our enemies shall have little chances to attack us."
                     [/message]
                     [remove_item]
                        x=30,33,23,19,39
@@ -1058,7 +1037,7 @@
                        [else]
                           [message]
                               speaker="Jahin"
-                              message= _ "Now, Let's focus our entire might on that Death Lord! Onwards!"
+                              message= _ "Now, let's focus our entire might on that Death Lord! Onwards!"
                           [/message]
                        [/else]
                     [/if]
@@ -1167,7 +1146,7 @@
             [then]
                 [message]
                     speaker="Jahin"
-                    message= _ "We couldn't protect enough villages! New Genesis has fallen!"
+                    message= _ "We could not protect enough villages! New Genesis has fallen!"
                 [/message]
 
                 [endlevel]
