--- a/The_Legend_Begins/scenarios/episode-3/58x_Alliance_of_Light.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/58x_Alliance_of_Light.cfg
@@ -17,13 +17,13 @@
           story= _ "Although their losses had been tremendous, Jahin and his army had defended New Genesis successfully; albeit most of it being destroyed during previous battles."
        [/part]
        [part]
-          story= _ "Now, with an impenetrable barrier enclosing the city, Jahin began to focus on other matters - rebuilding his beloved city and preparing for yet another winter. Having the dwarves there was a great benefit to him due their ancient skills as builders and weapon forgers. The dwarves were also given a new home - the mountains that now surrounded New Genesis were slowly being made into small dwarven villages."
+          story= _ "Now, with an impenetrable barrier enclosing the city, Jahin began to focus on other matters: rebuilding his beloved city and preparing for yet another winter. Having the dwarves there was a great benefit to him due their ancient skills as builders and weapon forgers. The dwarves were also given a new home - the mountains that now surrounded New Genesis were slowly being made into small dwarven villages."
        [/part]
        [part]
           story= _ "Jahin spent the winter learning battle tactics from Shifti and basic reading and writing knowledge from Sreeyoshee. He knew that this period of peace was only temporary and the time of reckoning would come soon enough. Thus, he worked hard and learned as much as possible from his two mentors for he needed to be prepared, both as a leader and a warrior, for the ordeal that was to come."
        [/part]
        [part]
-          story= _ "Ashhab, during this winter, began to read through the Book of Ancients for anything that might be useful and he found many spells that could do what he at first thought was impossible. With the help of Sreeyoshee, he was able to make artificial light and rainfall to increase the production of crops. Affan and Fardin, apart from being students of Sreeysohee's, were given the task of supervising the weekly harvest."
+          story= _ "Ashhab, during this winter, began to read through the Book of Ancients for anything that might be useful and he found many spells that could do what he at first thought was impossible. With the help of Sreeyoshee, he was able to make artificial light and rainfall to increase the production of crops. Affan and Fardin were given the task of supervising the weekly harvest."
        [/part]
        [part]
           story= _ "Sreeyoshee spent the winter conducting research on the stone which the skeletal warlord Rygar had given to Jahin and also taught Jahin, Fardin and Affan how to read and write. She was an excellent teacher and her students were interested in learning as well."
@@ -68,11 +68,11 @@
        {GENERIC_UNIT 2 "Dwarvish Lord" 5 4}
        {GENERIC_UNIT 2 "Dwarvish Thunderguard" 20 9}
        {GENERIC_UNIT 2 "Dwarvish Steelclad" 8 10}
-       {GENERIC_UNIT 2 "Dwarvish Runemaster" 4 9}
+       {GENERIC_UNIT 2 "Dwarvish Stalwart" 4 9}
        [+unit]
           id="Dwarf Supporter"
        [/unit]
-       {GENERIC_UNIT 2 "Dwarvish Dragonguard" 18 2}
+       {GENERIC_UNIT 2 "Dwarvish Arbalestier" 18 2}
        {GENERIC_UNIT 2 "Dwarvish Stalwart" 20 4}
 
        {GENERIC_UNIT 2 "Royal Guard" 21 5}
@@ -82,7 +82,7 @@
           id="Human Supporter"
        [/unit]
        {GENERIC_UNIT 2 "Swordsman" 18 7}
-       {GENERIC_UNIT 2 "Glaiver" 15 10}
+       {GENERIC_UNIT 2 "Sentry" 15 10}
        {GENERIC_UNIT 2 "Infantryman" 5 7}
        {GENERIC_UNIT 2 "Longbowman" 8 1}
        
@@ -143,10 +143,11 @@
           {IS_HERO}
           profile="portraits/galec.png"
        [/unit]
-       {GENERIC_UNIT 3 "South Elven Champion" 14 8}
+       {GENERIC_UNIT 3 "Southern Champion" 14 8}
        [+unit]
           id="Alkadur"
           name= _ "Alkadur"
+          experience=110
           {IS_HERO}
        [/unit]
 
@@ -186,13 +187,16 @@
            id="Krog"
        [/recall]
 
+       {TEAM_COLOR_OVERRIDE (id="Dwarf Supporter") khaki}
+       {TEAM_COLOR_OVERRIDE (id="Human Supporter") steel_blue}
+
        [message]
            speaker="Kojac"
-           message= _ "Before we begin this council, I would like to say something. Jahin, you have certainly outdone yourself. New Genesis is looking far greater than it was before, especially with that mountainous barrier."
+           message= _ "Before we begin this council, I would like to say something: Jahin, you have certainly outdone yourself. New Genesis is looking far greater than it was before, especially with that mountainous barrier."
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "I cannot take any credit for this. It was a spell from the Book of Ancients from which Ashhab, Sreeyoshee, and the dwarven rune-crafters constructed the barrier. The repairs were done solely by the dwarves. So, you should congratulate them and not me."
+           message= _ "I cannot take any credit for this. It was a spell from the Book of Ancients from which Ashhab, Sreeyoshee, and the dwarven rune-crafters constructed the barrier. The repairs were done solely by the dwarves. Hence, you should congratulate them and not me."
        [/message]
        [message]
            speaker="Gashinar"
@@ -204,11 +208,11 @@
        [/message]
        [message]
            speaker="Fardin"
-           message= _ "Hey, Jahin, wait. Where is Queen Afrin?"
+           message= _ "Hey, Kraag, wait. Where is Queen Azrin?"
        [/message]
        [message]
            speaker="Kraag"
-           message= _ "She declined to attend this council for she was busy preparing for war."
+           message= _ "She has declined to attend this council for she is busy preparing for war."
        [/message]
        [message]
            speaker="Jahin"
@@ -236,11 +240,11 @@
        [/message]
        [message]
            speaker="Kojac"
-           message= _ "There were a total three powerful enemies. One has been utterly decimated and the other two remain. So, I suggest that we attack those accursed hordes of demon-worshipping fanatics. Since their armies are currently at the north and south, I have a hunch that their cites are defenceless."
+           message= _ "There were a total three powerful enemies. One has been utterly decimated and the other two remain. So, I suggest that we attack those accursed hordes of demon-worshipping fanatics. Since their armies are currently at the north and south, I have a hunch that their city is defenceless."
        [/message]
        [message]
            speaker="Gashinar"
-           message= _ "Coincidently, I had sent scouts to observe their cites and your hunch is true, my friend. Those cites are only lightly protected whilst their main horde is fighting in the north. Their secondary army is at southeast, attacking our elven allies."
+           message= _ "Coincidently, I had sent scouts to observe their city and your hunch is true, my friend. Their city is only lightly protected whilst their main horde is fighting in the north. Their secondary army is at southeast, attacking our elven allies."
        [/message]
        [message]
            speaker="Jahin"
@@ -252,7 +256,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "If recall what Lord Karri Kon said before, then those cities are separated from the mainland by a sea and none of us have any experience at sailing ships."
+           message= _ "If I recall what Lord Karri Kon had said before, then that city is separated from the mainland by a sea and none of us have any experience at sailing ships."
        [/message]
        [message]
            speaker="Sedoc"
@@ -264,7 +268,7 @@
        [/message]
        [message]
            speaker="Sedoc"
-           message= _ "<i>laughing</i> We, Aragwaithi, ride giant eagles as mounts. We flew here of course!"
+           message= _ "<i>laughing</i> We ride giant eagles as mounts. We flew here of course!"
        [/message]
        [message]
            speaker="Fardin"
@@ -276,7 +280,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Those humans were part or alliance under the command of the late Jalin. I'm surprised to hear that still guard our eastern flank. Perhaps we should attack the vampires instead, since they are a minor threat, compared to the Chaos Empire?"
+           message= _ "Those humans are part of our alliance under the command of the late Jalin. I'm surprised to hear that they still guard our eastern flank. Perhaps we should attack the vampires instead, since they are a minor threat, compared to the Chaos Empire?"
        [/message]
        [message]
            speaker="Sedoc"
@@ -284,7 +288,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "But, the main question is: who are able to attack the vampires? I mean, other than my army?"
+           message= _ "However, the main question is: who are able to attack the vampires? I mean, other than my army?"
        [/message]
        [message]
            speaker="Tuug"
@@ -322,11 +326,11 @@
 
        [message]
            speaker="Jahin"
-           message= _ "It is settled then. The vampires shall be our next target. But, I feel sorry for being unable to help Queen Afrin. Her people would be surely destroyed by the entire might of the Chaos Empire."
+           message= _ "It is settled then. The vampires shall be our next target. However, I feel sorry for being unable to help Queen Azrin. Her people would surely be destroyed by the entire might of the Chaos Empire."
        [/message]
        [message]
            speaker="Kojac"
-           message= _ "That is sad, indeed. But, we can avenge them later by ambushing those hordes as soon as they cross to the mainland. Lord Gashinar, would you mind sending a fraction of your army there to reinforce mine?"
+           message= _ "That is sorrowful, indeed. But, we can avenge them later by ambushing those hordes as soon as they cross to the mainland. Lord Gashinar, would you mind sending a fraction of your army there to reinforce mine?"
        [/message]
        [message]
            speaker="Gashinar"
@@ -338,7 +342,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "The alliance, we currently have, deserves a name. Would anyone like to suggest any?"
+           message= _ "The alliance, which we currently have, deserves a name. Would anyone like to suggest any?"
        [/message]
 
        {CLEAR_VARIABLE Genesis_side,objectives_completed,village_count,wall_ascending_counter,wall_completed}
@@ -349,7 +353,7 @@
        [/message]
        [message]
            speaker="Kojac"
-           message= _ "The Alliance of Light? I like it. It sounds good."
+           message= _ "The Alliance of Light? I like it. It has a nice ring to it."
        [/message]
        [message]
            speaker="Tuug"
@@ -360,6 +364,13 @@
            message= _ "The name is perfect! Let's hear it for the Alliance for Light!"
        [/message]
        {NARRATOR_MESSAGE ( _ "Loud cheers of approval erupt from the gathered crowd...")}
+
+       {STORE_UNIT_VAR (id="Jahin") side Genesis_side}
+       {MODIFY_UNIT (side=2) side Genesis_side}
+
+       {CLEAR_VARIABLE Genesis_side}
+
+       {NARRATOR_MESSAGE ( _ "Due to the immense difficulty of the subsequent scenarios, you have been given fourteen veteran units to supplement your current recall list. Use them wisely...")}
        [endlevel]
            result="victory"
            linger_mode=no
