--- a/The_Legend_Begins/scenarios/episode-3/60a_A_Heros_Vendetta.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/60a_A_Heros_Vendetta.cfg
@@ -79,7 +79,7 @@
 
         [store_unit]
             [filter]
-                type="Glaiver,Heavy Infantryman,Cavalryman,Horseman,Shock Trooper,Knight,Dragoon,Lancer,Cavalier,Grand Knight,Iron Mauler,Orcish Grunt,Orcish Archer,Orcish Assassin,Wolf Rider,Orcish Warrior,Orcish Crossbowman,Orcish Slayer,Goblin Knight,Goblin Pillager,Direwolf Rider,Orcish Warlord,Orcish Slurbow,Orcish Nightblade"
+                type="Sentry,Heavy Infantryman,Cavalryman,Horseman,Shock Trooper,Knight,Dragoon,Lancer,Cavalier,Grand Knight,Iron Mauler,Orcish Grunt,Orcish Archer,Orcish Assassin,Wolf Rider,Orcish Warrior,Orcish Crossbowman,Orcish Slayer,Goblin Knight,Goblin Pillager,Direwolf Rider,Orcish Warlord,Orcish Slurbow,Orcish Nightblade"
             [/filter]
             kill=yes
             variable="stored.veterans"
@@ -93,36 +93,36 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Defeat Comdr. Ashford (side 8 leader) with Jahin."
+                description= _ "Defeat Comdr. Ashford (side 8 leader) with Jahin"
                 condition="win"
             [/objective]
             [objective]
-                description= _ "Reduce the Vampire army (Defeat all enemy leaders)."
+                description= _ "Reduce the Vampire army (Defeat all enemy leaders)"
                 condition="win"
             [/objective]
             [objective]
-                description= _ "Replenish your ranks (for later scenarios)."
+                description= _ "Replenish your ranks (for later scenarios)"
                 condition="win"
             [/objective]
             [objective]
-                description= _ "Keep at least 500 gold by the end of this scenario."
+                description= _ "Keep at least 500 gold by the end of this scenario"
                 condition="win"
             [/objective]
 
             [objective]
-                description= _ "Death of Jahin."
+                description= _ "Death of Jahin"
                 condition="lose"
             [/objective]
             [objective]
-                description= _ "Death of any hero unit."
+                description= _ "Death of any hero unit"
                 condition="lose"
             [/objective]
             [objective]
-                description= _ "Death of an allied leader."
+                description= _ "Death of an allied leader"
                 condition="lose"
             [/objective]
             [objective]
-                description= _ "Comdr. Ashford is killed by a unit other than Jahin."
+                description= _ "Comdr. Ashford is killed by a unit other than Jahin"
                 condition="lose"
             [/objective]
             {TURNS_RUN_OUT}
@@ -234,7 +234,6 @@
            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.70}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
@@ -256,9 +255,8 @@
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern (fighter,fighter,fighter,archer,archer,scout)}
            {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.30}
-           {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
+           {AI_SIMPLE_ALWAYS_ASPECT caution 0.60}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
@@ -286,7 +284,7 @@
        [/filter]
        [message]
            speaker="Jahin"
-           message= _ "Oh, no! We have loss a valuable ally! We're doomed!"
+           message= _ "Oh, no! We have loss a valuable ally! We are doomed!"
        [/message]
        [endlevel]
            result="defeat"
@@ -313,7 +311,6 @@
            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
@@ -337,7 +334,6 @@
            {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
@@ -391,7 +387,6 @@
            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
@@ -462,8 +457,8 @@
        side=5
        team_name="bad"
        user_team_name= _ "Minotaurs"
-       id="Tarif"
-       name= _ "Tarif"
+       id="Rheor"
+       name= _ "Rheor"
        type="Minotaur Overlord"
        canrecruit=yes
        controller=ai
@@ -477,21 +472,20 @@
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
               [criteria]
-                  side=9
+                  id="Jahin"
               [/criteria]
-              value=40
+              value=50
            [/goal]
            [goal]
               name="target"
               [criteria]
                   side=2
               [/criteria]
-              value=30
+              value=40
            [/goal]
         [/ai]
    [/side]
@@ -505,7 +499,7 @@
    [event]
        name="die"
        [filter]
-           id="Tarif"
+           id="Rheor"
        [/filter]
        [filter_second]
            [not]
@@ -521,7 +515,7 @@
    [event]
        name="die"
        [filter]
-           id="Tarif"
+           id="Rheor"
        [/filter]
        [filter_second]
               side=1
@@ -590,7 +584,7 @@
               [command]
                   [message]
                       speaker="Jahin"
-                      message= _ "I'm sorry. I have enough soldiers with me already."
+                      message= _ "I'm sorry for I have enough soldiers with me already."
                   [/message]
                   [message]
                       speaker="Loyal"
@@ -631,7 +625,6 @@
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
@@ -715,7 +708,6 @@
            {AI_SIMPLE_ALWAYS_ASPECT aggression 0.99}
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
@@ -917,7 +909,6 @@
            {AI_SIMPLE_ALWAYS_ASPECT grouping no}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
            {AI_SIMPLE_ALWAYS_ASPECT simple_targeting yes}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
@@ -1003,7 +994,6 @@
            {AI_SIMPLE_ALWAYS_ASPECT caution 0.40}
            {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
            {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
-           {ATTACK_DEPTH 5 5 6}
 
            [goal]
               name="target"
@@ -1030,14 +1020,14 @@
        [/filter]
        [message]
            speaker="Jahin"
-           message= _ "Thank you, drake chief. I will never forget about your invaluable support."
+           message= _ "Thank you, drake chief. I shall never forget about your invaluable support."
        [/message]
    [/event]
 
    [side]
        side=10
        team_name="bad"
-       color="pink"
+       color="khaki"
        user_team_name= _ "Vampires"
        no_leader=yes
        gold=0
@@ -1139,7 +1129,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "We are always happy to help. But, before I forget, Lord Warren, do you have any soldiers who can steer ships? It turns out that the vampire capital city is beyond the seas and none of my men can navigate ships."
+           message= _ "We are always happy to help. However, Lord Warren, do you have any soldiers who can steer ships? It turns out that the vampire capital city is beyond the seas and none of my men can navigate ships."
        [/message]
        [message]
            speaker="Lord Warren"
@@ -1164,7 +1154,7 @@
           [then]
              [message]
                  speaker="Kran Kor"
-                 message= _ "Wait, aren't you gonna pay us for our services?"
+                 message= _ "Wait, aren't you going to pay us for our services?"
              [/message]
              [message]
                  speaker="Jahin"
@@ -1228,7 +1218,7 @@
        {DELAY 400}
        [message]
            speaker="Jahin"
-           message= _ "<i>(thinking)</i> Wait, that commander's face...I have seen that face before....No, it can't be...I must confirm it."
+           message= _ "<i>(thinking)</i> Wait, that commander's face...I have seen that face before....No, it cannot be...I must confirm it."
        [/message]
        [message]
            speaker="Jahin"
@@ -1240,15 +1230,15 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "During your time as as captain, did you ever try to convert a person to your kind and that resulted in that certain person's demise?"
+           message= _ "During your time as a captain, did you ever try to convert a person to your kind and that resulted in that certain person's demise?"
        [/message]
        [message]
            speaker="Comdr. Ashford"
-           message= _ "Now, that you mention it; there was this woman, mother of six, that faced a fate like that. But, why are you so interested, human?"
+           message= _ "Now, that you mention it; there was this woman, mother of a boy, that faced a fate such as that. But, why are you so interested, human?"
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "How does that incident relate to me? Well, it's quite simple. That woman was my mother, you rotten, blood-sucking vampire! I never forgot that day and probably never will! What did she ever do to you?! Now, I shall have avenge her death! Soldiers of New Genesis, destroy that fortress but, leave that vermin to me. I shall dispose of him myself!"
+           message= _ "How does that incident relate to me? Well, it's quite simple actually. She was my mother, you rotten, blood-sucking vampire! I never forgot that day and probably never shall! What did she ever do to you? Now, I shall have avenge her death! Soldiers of New Genesis, destroy that fortress but, leave that vermin to me. I shall dispose of him myself!"
        [/message]
    [/event]
 
@@ -1270,11 +1260,11 @@
 
        [message]
            speaker="Sreeyoshee"
-           message= _ "Jahin, is extracting your vengeance mandatory? You don't have to do this. There is always another option - peace."
+           message= _ "Jahin, is extracting your vengeance mandatory? You don't have to do this. There is always another option: peace."
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "No,  Sreeyoshee. That can never be. These vampires have done crimes that are unforgivable. They must be silenced; once and for all."
+           message= _ "No,  Sreeyoshee. That can never be. These vampires have done crimes that are unforgivable. They must be silenced; once and for all!"
        [/message]
    [/event]
 
@@ -1283,19 +1273,19 @@
        
        [message]
            speaker="Jahin"
-           message= _ "Prince Laurent, also known as the Champion of the Blood and the Second Eldest, I have hear a lot about you. Where was that legendary great-sword you always carry?"
+           message= _ "Prince Laurent, also known as the Champion of the Blood and the Second Eldest, I have heard a lot about you. Where is that legendary great-sword you always carry?"
        [/message]
        [message]
            speaker="Prince Laurent"
-           message= _ "It feels good to hear that the enemy knows my identity. As for my sword, I left at my father's palace."
+           message= _ "It feels good to hear that the enemy knows of my identity. As for my sword, I have left it at my father's palace."
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Oh, that's a shame. I wanted to take that sword home as a trophy when I had slain you. But, I guess I shall have to settle for your head instead!"
+           message= _ "Oh, that's a shame. I wanted to take that sword home as a trophy when I had slain you. However, I speculate that I shall have to settle for your head instead!"
        [/message]
        [message]
            speaker="Prince Laurent"
-           message= _ "<i>(laughing)</i> You make me laugh, human. I conquered the Celestial remnants and enslaved the Minotaur race. How can a mortal like you defeat me?"
+           message= _ "<i>(laughing)</i> You make me laugh, human. I have conquered the Celestial remnants and enslaved the Minotaur race. How can a mortal like you defeat me?"
        [/message]
        [message]
            speaker="Jahin"
