--- a/The_Legend_Begins/scenarios/episode-3/60b_Swamp_of_Evil.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/60b_Swamp_of_Evil.cfg
@@ -10,8 +10,6 @@
 
     {DEFAULT_MUSIC_PLAYLIST}
 
-    # You are well away from the Blood Sun's influence
-
     {DEFAULT_SCHEDULE_BLOOD_SET}
     {KNIGHTHOOD_GRANTING_MACRO}
 
@@ -78,7 +76,7 @@
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern (fighter,fighter,fighter,fighter,archer,archer,archer,mixed fighter,healer,scout)}
           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-          {ATTACK_DEPTH 5 5 4}
+        
 
           [goal]
               name="protect_unit"
@@ -98,7 +96,7 @@
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern (fighter,fighter,fighter,fighter,archer,archer,archer,mixed fighter,healer,scout)}
           {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
-          {ATTACK_DEPTH 5 5 4}
+  
 
           [goal]
               name="protect_unit"
@@ -120,7 +118,7 @@
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "Oh, no! General Red-Tusk has fallen! Now, we're severely outnumbered!"
+            message= _ "Oh, no! General Red-Tusk has fallen! Now, we are severely outnumbered!"
         [/message]
         [endlevel]
             result="defeat"
@@ -158,7 +156,7 @@
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern (fighter,fighter,fighter,fighter,archer,archer,archer,mixed fighter,healer,scout)}
           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-          {ATTACK_DEPTH 5 5 4}
+  
 
           [goal]
               name="protect_unit"
@@ -178,7 +176,7 @@
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern (fighter,fighter,fighter,fighter,archer,archer,archer,mixed fighter,healer,scout)}
           {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
-          {ATTACK_DEPTH 5 5 4}
+   
 
           [goal]
               name="protect_unit"
@@ -451,24 +449,24 @@
        [objectives]
            side=1
            [objective]
-               description= _ "Find Jalin and then destroy him in order to resurrect him."
+               description= _ "Find Jalin and then destroy him in order to resurrect him"
                condition="win"
            [/objective]
            [objective]
-               description= _ "Move Jahin to the sign post. (44,33)"
+               description= _ "Move Jahin to the sign post (44,33)"
                condition="win"
            [/objective]
 
            [objective]
-               description= _ "Death of Jahin."
+               description= _ "Death of Jahin"
                condition="lose"
            [/objective]
            [objective]
-               description= _ "Death of any hero unit."
+               description= _ "Death of any hero unit"
                condition="lose"
            [/objective]
            [objective]
-               description= _ "Death of an allied leader."
+               description= _ "Death of an allied leader"
                condition="lose"
            [/objective]
            {TURNS_RUN_OUT}
@@ -665,7 +663,7 @@
               [/message]
               [message]
                   speaker="Fardin"
-                  message= _ "We were gonna do that but, this swamps seem to be thronged with undead. These abominations have hindered our progress to a considerable extent..."
+                  message= _ "We were gonna do that but, this swamp seems to be thronged with undead. These abominations have hindered our progress to a considerable extent..."
               [/message]
               [message]
                   speaker="Death1"
@@ -673,7 +671,7 @@
               [/message]
               [message]
                   speaker="Jahin"
-                  message= _ "That voice sounded oddly familiar. Damn, it's Jalin!"
+                  message= _ "That voice sounded oddly familiar. It's Jalin!"
               [/message]
               [message]
                   speaker="Aethunry"
@@ -681,7 +679,7 @@
               [/message]
               [message]
                   speaker="Jahin"
-                  message= _ "The darkness has clouded his mind, but my friend, Sreeyoshee, has an item that might bring back. We just need to find him and get out of this infernal swamp. Soldiers, to arms and be cautious. The enemy might be watching our every move."
+                  message= _ "The darkness has clouded his mind, but my friend, Sreeyoshee, has an item that might bring him back. We just need to find him and get out of this infernal swamp. Soldiers, to arms and be cautious. The enemy might be watching our every move."
               [/message]
           [/then]
        [/if]
@@ -706,7 +704,7 @@
              [/message]
              [message]
                  speaker="Jahin"
-                 message= _ "That voice sounded oddly familiar. Damn, it's Jalin!"
+                 message= _ "That voice sounded oddly familiar. It's Jalin!"
              [/message]
              [message]
                   speaker="Aethunry"
@@ -723,7 +721,7 @@
 
        [message]
            speaker="Shifti"
-           message= _ "Jahin, since we are fighting undead, I suggest you to heavily recruit more <i>Heavy Infantrymen</i> and <i>Dwarven Fighters</i>. Also, those creatures that are known as the <i>Unhatched</i> and <i>Life Thieves</i> might be useful as well. You should try to use them in combination with your regular troops."
+           message= _ "Jahin, since we are fighting undead, I suggest you to heavily recruit more <i>Heavy Infantrymen</i> and <i>Dwarven Fighters</i>. Additionally, those creatures that are known as the <i>Unhatched</i> and <i>Life Thieves</i> might be useful as well. You should try to use them in combination with your regular troops."
        [/message]
 
        [allow_recruit]
@@ -842,7 +840,7 @@
             [then]
                [message]
                    speaker="Jahin"
-                   message= _ "We can't leave here without reviving Jalin first!"
+                   message= _ "We cannot leave here without reviving Jalin first!"
                [/message]
             [/then]
         [/if]
@@ -931,12 +929,17 @@
            id="Mor-Inal"
            name= _ "Mor-Inal"
            type="Dread Lich"
-           profile="portraits/mor-inal-knight.png"
+           profile="portraits/mor-inal-lich.png"
            x,y=14,21
            canrecruit=yes
         [/unit]
 
         {CLEAR_FOG 1 14 21 8}
+        [remove_shroud]
+           side=1,2,3
+           x,y=14,21
+           radius=8
+        [/remove_shroud]
         {DELAY 100}
         {SCROLL_TO 14 21}
         {DELAY 100}
@@ -947,7 +950,7 @@
         [/message]
         [message]
            speaker="Jahin"
-           message= _ "<i>(enraged)</i> You abomination! What the hell are you doing here?! Then again, stay there. I shall finish you once and for all!"
+           message= _ "<i>(enraged)</i> You abomination! What on Irdya are you doing here? Then again, stay there. I shall finish you once and for all!"
         [/message]
         [message]
            speaker="Mor-Inal"
