--- a/The_Legend_Begins/scenarios/episode-3/61_Land_of_the_Minotaurs.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/61_Land_of_the_Minotaurs.cfg
@@ -30,7 +30,7 @@
     [story]
         [part]
             music="battle.ogg"
-            story= _ "As soon as his army had scattered the undead, Jahin, having no interest in staying there any longer, gave the order to resume the march. The army of the Alliance hiked through the marshlands and reached the edge of the swamp by the dawn of the following day..."
+            story= _ "As soon as his army had scattered the undead, Jahin, having no interest in staying amidst the swamps any longer, gave the order to resume the march. Following their commander's order, the army of the Alliance hiked through the marshlands and reached the edge of the swamp by the dawn of the following day..."
         [/part]
     [/story]
 
@@ -94,7 +94,7 @@
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern (fighter,fighter,fighter,fighter,archer,archer,archer,mixed fighter,healer,scout)}
           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-          {ATTACK_DEPTH 5 5 4}
+     
        [/ai]
 
        [ai]
@@ -105,7 +105,7 @@
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_pattern (fighter,fighter,fighter,fighter,archer,archer,archer,mixed fighter,healer,scout)}
           {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
-          {ATTACK_DEPTH 5 5 4}
+         
        [/ai]
     [/side]
 
@@ -121,7 +121,7 @@
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "Oh, no! General Red-Tusk has fallen! Now, we're severely outnumbered!"
+            message= _ "Oh, no! General Red-Tusk has fallen! Now, we are severely outnumbered!"
         [/message]
         [endlevel]
             result="defeat"
@@ -150,7 +150,6 @@
           {AI_SIMPLE_ALWAYS_ASPECT caution 0.20}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-          {ATTACK_DEPTH 5 5 4}
 
           [goal]
              name=protect_unit
@@ -168,7 +167,6 @@
           {AI_SIMPLE_ALWAYS_ASPECT caution 0.50}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
-          {ATTACK_DEPTH 5 5 4}
 
           [goal]
              name=protect_unit
@@ -191,7 +189,7 @@
        [/filter]
        [message]
           speaker="Jahin"
-          message= _ "Oh, no! We needed him alive in order to gain these warriors as allies!"
+          message= _ "Oh, no! We needed to keep him alive in order to gain these warriors as allies!"
        [/message]
        [endlevel]
           result=defeat
@@ -427,19 +425,19 @@
 
        [message]
            speaker="Jahin"
-           message= _ "Hey, this isn't a vampire city at all! It's full of the strangest creatures I have ever encountered!"
+           message= _ "Hey, this is not a vampire city at all! It's full of the most strangest creatures I have ever encountered!"
        [/message]
        [message]
            speaker="Rharcyn"
-           message= _ "For your information, human, this was a vampire city but; that was before we revolted and killed every single one of them."
+           message= _ "Human whelp, how dare you mention the name of that accursed race in front us, the Minotaurs?"
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Are you an enemy of them then?"
+           message= _ "Are you an enemy of the vampires then?"
        [/message]
        [message]
            speaker="Rharcyn"
-           message= _ "An enemy?! We abhor them! Those blood-gorging mules kept us imprisoned for centuries!"
+           message= _ "An enemy? We abhor them! We have fought those blood-gorging mules for centuries!"
        [/message]
        [message]
            speaker="Shifti"
@@ -447,7 +445,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Would you like to join us? We're are currently on a campaign to rid every single one of them."
+           message= _ "Would you like to join us? We are currently on a campaign to destroy every single one of them."
        [/message]
        [message]
            speaker="Jalin"
@@ -455,7 +453,7 @@
        [/message]
        [message]
            speaker="Rharcyn"
-           message= _ "Join you?! First prove yourselves worthy for our aid. Then, and only then, we shall fight for you."
+           message= _ "Join you? First prove yourselves worthy for our aid. Then, and only then, shall we fight for you."
        [/message]
        [message]
            speaker="Jalin"
@@ -467,13 +465,13 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Fine."
+           message= _ "Soldiers, to arms!"
        [/message]
 
        [message]
            speaker="narrator"
            image="wesnoth-icon.png"
-           message= _ "For the remainder of this campaign, Jalin will appear as an allied leader in most scenarios. He can recruit novice human soldiers, as well as a few experienced ones. So, try to give him a few useful recalls..."
+           message= _ "For the remainder of this campaign, Jalin will appear as an allied leader in most scenarios. He can recruit novice human soldiers, as well as a few experienced ones. Try to give him a few useful recalls..."
        [/message]
     [/event]
 
@@ -517,7 +515,7 @@
               [/message]
               [message]
                   speaker="Jahin"
-                  message= _ "No worries, general. I believe we can manage the southern battle by ourselves. Can you take your army back to those twin cities and wait for us there? We shan't be long."
+                  message= _ "No worries, general. I believe we can manage the southern battle by ourselves. Can you take your army back to those twin cities and wait for us there? We shall not be long."
               [/message]
               [message]
                   speaker="Vigor"
@@ -546,7 +544,7 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "No, we haven't. We can't reach their city since none of us can steer ships."
+            message= _ "No, we have not. We cannot reach their city since none of us can steer ships."
         [/message]
         [message]
             speaker="Jalin"
@@ -562,12 +560,12 @@
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "I guess we have to go south after this."
+            message= _ "I speculate that we have to go south after this."
         [/message]
     [/event]
 
     [event]
-        name="turn 2"
+        name="turn 7"
         first_time_only=yes
 
         [message]
