--- a/The_Legend_Begins/scenarios/episode-3/62_Revenge_and_Sorrow.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/62_Revenge_and_Sorrow.cfg
@@ -100,7 +100,7 @@
     [/side]
 
     {STARTING_VILLAGES 3 6}
-    {TLB_RECRUIT_PER_TURN 3 (Minotaur Rouser) 1}
+    {TLB_RECRUIT_PER_TURN 3 (Minotaur Rouser) 2}
     {TLB_RECRUIT_PER_TURN 3 (Minotaur Mystic) 1}
     {TLB_RECRUIT_PER_TURN 3 (Minotaur Slayer) 1}
     {TLB_RECRUIT_PER_TURN 3 (Boar Knight) 2}
@@ -113,7 +113,7 @@
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "Oh, no! We've lost the minotaur lord! We're severely outnumbered now!"
+            message= _ "Oh, no! We have lost the minotaur lord! We are severely outnumbered now!"
         [/message]
         [endlevel]
             result=defeat
@@ -429,7 +429,7 @@
 
        [message]
            speaker="Jahin"
-           message= _ "Chaos..."
+           message= _ "<i>(crossed)</i> Chaos..."
        [/message]
 
        [scroll_to_unit]
@@ -465,7 +465,7 @@
 
        [message]
           speaker="Nadia"
-          message= _ "I'm surprised that this foolish boy managed to escape from Urvatha. Azura must have aided him! No matter, destroy these heathens!"
+          message= _ "I'm surprised that this foolish boy has managed to escape from Urvatha. Azura must have aided him! No matter, destroy these heathens!"
        [/message]
     [/event]
 
@@ -479,11 +479,11 @@
        [/message]
        [message]
            speaker="Baryn"
-           message= _ "Human, we were once your enemies due to our alliance and also for the fact that you destroyed our sacred grove at the Northern Desert. Despite this, we stand allied to you today for we are allies to those who defend the forest and enemies to those destroy it!"
+           message= _ "Human, we were once your enemies due to our alliance and also for the fact that you had destroyed our sacred grove at the Northern Desert. Despite this, we stand allied to you today for we are allies to those who defend the forest and enemies to those who destroy it!"
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Well, we are happy to accept you as our allies. Now let's kill as many demons as possible!" 
+           message= _ "Well, we are happy to accept you as our allies and now, let's kill as many demons as possible!" 
        [/message]
     [/event]
 
@@ -496,15 +496,15 @@
         [/message]
         [message]
             speaker="Galec"
-            message= _ "Thank you, Jahin. You have won the respect of all elves yet again. But, I'm afraid that we shall not be able to aid you any further. This attack has left us greatly weakened and there are not many soldiers left. The soldiers that have survived this ordeal either weakened or are inflicted by wounds, which may take weeks to heal."
+            message= _ "Thank you, Jahin. You have won the respect of all elves yet again. But, I'm afraid that we shall not be able to aid you any further. This attack has left us greatly weakened and there are not many soldiers left. The soldiers that have survived this ordeal are either weakened or are inflicted by wounds, which may take weeks to heal."
         [/message]
         [message]
             speaker="Jahin"
-            message= _ "I understand the situation of your people for we were once in this situation ourselves. I would not ask you to fight anymore but only to keep a score of your battle-ready soldiers guarding your western borders for I still think that some Chaos soldiers might still be lurking around. As for my army we must now head south to re-establish connections with the mermen for they are a key element in our invasion of the Vampire Capital. Anyways, how do the desert elves fare?"
+            message= _ "I understand the situation of your people for we were once in this situation ourselves. I would not ask you to fight anymore but only to keep a score of your battle-ready soldiers guarding your western borders for I think that some Chaos soldiers might still be lurking around. As for my army, we must now head south to re-establish connections with the mermen for they are a key element in our invasion of the Vampire Capital. Anyways, how do the desert elves fare?"
         [/message]
         [message]
             speaker="Galec"
-            message= _ "We sent a messenger to them for aid but he returned with even grimmer news - the desert elves were obliterated to the last. None of them survived the attack of the Valdemons and the demonic stormkind."
+            message= _ "We sent a messenger to them for aid but, he returned with even grimmer news: the desert elves were obliterated to the last child. None of them survived the attack of the Valdemons and the demonic stormkind."
         [/message]
         [message]
             speaker="Ashhab"
@@ -512,12 +512,12 @@
         [/message]
         [message]
             speaker="Jalin"
-            message= _ "That is grim indeed. But, we must not tarry with the past. Thus, let's advance further south."
+            message= _ "That is grim indeed. However, we must not tarry with the past and thus, let's advance further south."
         [/message]
 
         [message]
             speaker="Jahin"
-            message= _ "Fardin, have the dwarves begin repairs on the siege weapons. Negotiating with the mermen shouldn't take more than a day or two."
+            message= _ "Fardin, have the dwarves begin repairs on the siege weapons. Negotiating with the mermen should not take more than a day or two."
         [/message]
 
         [endlevel]
