--- a/The_Legend_Begins/scenarios/episode-3/64_Prince_of_Darkness.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/64_Prince_of_Darkness.cfg
@@ -361,7 +361,7 @@
        [objectives]
            side=1
            [objective]
-               description= _ "Defeat King Kasch at all costs"
+               description= _ "Defeat King Kasch"
                conditions="win" 
            [/objective]
 
@@ -391,6 +391,7 @@
        {CLEAR_VARIABLE escape_secured,launch,methusalem_revealed,random,revived_hero}
 
        {VARIABLE hulks_killed 0}
+       {VARIABLE minions_killed 0}
 
        # Scatter bats, since we can't have a vampire boss with our them
 
@@ -439,11 +440,11 @@
 
        [message]
             speaker="Jahin"
-            message= _ "So, you are the so-called High Methusalem? Well, I figured you did be a little...I don't know....more menacing?"
+            message= _ "You are the so-called High Methusalem? Well, I figured you did be a little...I don't know....more menacing?"
        [/message]
        [message]
             speaker="Kasch"
-            message= _ "Boy, do you have any idea about who are dealing with? I am the first of my kind. I am a natural affliction. I am the Prince of Darkness!"
+            message= _ "Boy, do you have any idea about who are dealing with? I am the first of my kind. I am a natural affliction! I am the Prince of Darkness!"
        [/message]
 
        {FADE_TO_BLACK}
@@ -481,7 +482,7 @@
        
        [message]
             speaker="Jahin"
-            message= _ "Sreeyoshee, my men and I have hated the vampires for as long as we can remember. Even if some of them are wounded or tired, they shall surely fight for the time to avenge our deceased loved ones has finally arrived."
+            message= _ "Sreeyoshee, my men and I have hated the vampires for as long as we can remember. Even if some of them are wounded or tired, they shall surely fight because the time to avenge our deceased loved ones has finally arrived."
        [/message]
 
        [replace_map]
@@ -598,12 +599,12 @@
 
         [message]
             speaker="Jahin"
-            message= _ "<i>(visibly unhinged)</i> How did you know my name? And what is this thing you call 'Arkenova'? I have heard it before but I am unsure of what it is exactly."
+            message= _ "<i>(visibly unhinged)</i> How did you know my name? What is this thing you call 'Arkenova'? I have heard about it before but, I am unsure of what it is exactly."
         [/message]
 
         [message]
             speaker="Kasch"
-            message= _ "Your blood tells me many things about you, Jahin of New Genesis. Since I shall kill you soon, I see no harm in telling you some historical facts. Arkenova is the name of this land and we, the vampires are one of its oldest inhabitants. We had fought countless wars against the drakes and minotaurs to establish our territory and we are not going to let you and your inferior faction take away our land! My children, fall upon the them!"
+            message= _ "Your blood tells me many things about you, Jahin of New Genesis. Since I shall kill you soon, I see no harm in telling you some historical facts. Arkenova is the name of this land and we vampires are one of its oldest inhabitants. We had fought countless wars against the drakes and minotaurs to establish our territory and we are not going to let you and your inferior faction take away our land! My children, fall upon the them!"
         [/message]
 
         {FADE_TO_BLACK}
@@ -658,26 +659,25 @@
         first_time_only=no
 
         [filter]
-            side=4
+           side=4
         [/filter]
-        [kill]
-            x,y=$x1,$y1
-        [/kill]
+
+        {VARIABLE_OP minions_killed add 1}
 
         [if]
-           [not]
-              [have_unit]
-                  [filter]
-                      side=4
-                  [/filter]
-              [/have_unit]
-           [/not]
-
+           {VARIABLE_CONDITIONAL minions_killed numerical_equals 54}
            [then]
               [fire_event]
                   name="third_stage"
               [/fire_event]
            [/then]
+           [else]
+              [print]
+                  red,green,blue=255,255,255
+                  size=18
+                  text= _ "$minions_killed Vampires killed!"
+              [/print]
+           [/else]
         [/if]
     [/event]
 
@@ -737,7 +737,7 @@
 
         [message]
             speaker="Jahin"
-            message= _ "Of course not! We have the possibility of turning the landscape against out enemies. Let us siege the castle that is established north from our initial base first. Then we can lure the enemy into attacking us from the blood pool. That way we can maximise damage and minimise retaliation."
+            message= _ "Of course not! We have the possibility of turning the landscape against our adversaries. Let us siege the castle that is established north from our initial base first. Then we can lure the enemy into attacking us from the blood pool. That way we can maximise damage and minimise retaliation."
         [/message]
 
         [message]
@@ -779,10 +779,15 @@
             map="{~add-ons/The_Legend_Begins/maps/episode-3/64_05_Prince_of_Darkness.map}"
         [/replace_map]
 
-        {MOVE_UNIT (id="Kasch") 53 30}
-        {DELAY 100}
+        {FADE_TO_BLACK}
+
+        {TELEPORT_UNIT (id="Kasch") 53 30}
+
+        {FADE_IN}
 
         {MODIFY_UNIT (id="Kasch") facing sw}
+
+        {SCROLL_TO 53 30}
 
         [message]
             speaker="Kasch"
@@ -851,22 +856,12 @@
             animate=yes
         [/kill]
 
-        [kill]
-            id="Fardin"
-            animate=yes
-        [/kill]
-
         [terrain]
             x,y=54,29
             terrain="Gll^Pzd"
         [/terrain]
 
         {DELAY 100}
-
-        [message]
-            speaker="Jahin"
-            message= _ "<i>(shocked)</i> Fardin..."
-        [/message]
 
         {QUAKE (melee-fire.ogg)}{DELAY 50}
         {QUAKE (melee-fire.ogg)}{DELAY 50}
