--- a/The_Legend_Begins/scenarios/episode-3/63_Vampire_Metropolis.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/63_Vampire_Metropolis.cfg
@@ -30,7 +30,7 @@
    [story]
       [part]
           music="knolls.ogg"
-          story= _ "Scarcely a week had passed after that gruesome ordeal, and Jalin had accomplished establishing communications with the Mermen. Kai Alastyn, the king of the mermen, agreed to use their magic of the winds to guide the vessels to the vampire capital but refused to aid directly since the majority of his army had been decimated by the Chaos Empire and their demonic allies."
+          story= _ "Scarcely a week had passed after that gruesome ordeal and Jalin had already accomplished re-establishing communications with the Mermen. Kai Alastyn, the king of the mermen, agreed to use their magic of the winds to guide the vessels to the vampire capital but, refused to aid directly since the majority of his army had been decimated by the Chaos Empire and their demonic allies."
       [/part]
       [part]
           story= _ "By the time the preparations had finally been made, autumn had arrived and winter was not that far behind. Realising that wasting more time would be futile, Jahin gave the order to sail and off went the fleet."
@@ -442,7 +442,6 @@
           {AI_SIMPLE_ALWAYS_ASPECT caution 0.50}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-          {ATTACK_DEPTH 5 5 4}
 
           [goal]
               name="protect_unit"
@@ -461,7 +460,6 @@
           {AI_SIMPLE_ALWAYS_ASPECT caution 0.50}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
-          {ATTACK_DEPTH 5 5 4}
 
           [goal]
               name="protect_unit"
@@ -482,7 +480,7 @@
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "Oh, no! General Red-Tusk has fallen! Now, we're severely outnumbered!"
+            message= _ "Oh, no! General Red-Tusk has fallen! Now, we are severely outnumbered!"
         [/message]
         [endlevel]
             result="defeat"
@@ -516,7 +514,6 @@
           {AI_SIMPLE_ALWAYS_ASPECT caution 0.50}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-          {ATTACK_DEPTH 5 5 4}
 
           [goal]
               name="protect_unit"
@@ -535,7 +532,6 @@
           {AI_SIMPLE_ALWAYS_ASPECT caution 0.50}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
-          {ATTACK_DEPTH 5 5 4}
 
           [goal]
               name="protect_unit"
@@ -556,7 +552,7 @@
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "Oh, no! We've lost the minotaur lord! We're severely outnumbered now!"
+            message= _ "Oh, no! We have lost the minotaur lord! We are severely outnumbered now!"
         [/message]
         [endlevel]
             result=defeat
@@ -565,7 +561,7 @@
 
     [side]
         side=12
-        color=yellow
+        color=sky_blue
         team_name="good,vampires"
         user_team_name= _ "Ships"
         no_leader=yes
@@ -610,10 +606,9 @@
           {AI_SIMPLE_ALWAYS_ASPECT time_of_day lawful}
           {AI_SIMPLE_ALWAYS_ASPECT aggression 0.80}
           {AI_SIMPLE_ALWAYS_ASPECT leader_aggression -10}
-          {AI_SIMPLE_ALWAYS_ASPECT caution 0.50}
+          {AI_SIMPLE_ALWAYS_ASPECT caution 0.20}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping offensive}
-          {ATTACK_DEPTH 5 5 4}
        [/ai]
 
        [ai]
@@ -623,7 +618,6 @@
           {AI_SIMPLE_ALWAYS_ASPECT caution 0.50}
           {AI_SIMPLE_ALWAYS_ASPECT recruitment_ignore_bad_combat no}
           {AI_SIMPLE_ALWAYS_ASPECT grouping defensive}
-          {ATTACK_DEPTH 5 5 4}
        [/ai]
 
        [ai]
@@ -641,7 +635,7 @@
         [/filter]
         [message]
             speaker="Jahin"
-            message= _ "Oh, no! We needed to keep the merman king alive! Now, nothing is holding the vampires back! We're doomed!"
+            message= _ "Oh, no! We needed to keep the merman king alive! Now, nothing is holding the vampires back! We are doomed!"
         [/message]
         [endlevel]
             result=defeat
@@ -672,7 +666,7 @@
           [then]
              [message]
                  speaker="unit"
-                 message= _ "Hey, everybody, look! I found a platinum steel door. Examining it closer, I see a keyhole and an image of a sword engraved on it. This must be the place where Prince Laurent keeps his legendary sword. It's a shame that we cannot take it."
+                 message= _ "Hey, everybody, look! I found a platinum steel door. Examining it closer, I can see a keyhole and an image of a sword engraved on it. This must be the place where Prince Laurent keeps his legendary sword. It's a shame that we cannot take it."
              [/message]
           [/then]
        [/if]
@@ -681,9 +675,9 @@
           [then]
              [message]
                  speaker="unit"
-                 message= _ "Hey, everybody, look! I found a platinum steel door. Examining it closer, I see a keyhole and an image of a sword engraved on it. This must be the place where Prince Laurent keeps his legendary sword. We looted a key from the deceased prince and I shall use it."
+                 message= _ "Hey, everybody, look! I found a platinum steel door. Examining it closer, I can see a keyhole and an image of a sword engraved on it. This must be the place where Prince Laurent keeps his legendary sword. I recall that we looted a key from the deceased prince and I shall use it."
              [/message]
-             {NARRATOR_MESSAGE ( _ "<i>No sooner had the key been inserted, the wall descends below.</i>")}
+             {NARRATOR_MESSAGE ( _ "<i>No sooner had the key been inserted and turned clockwise, the wall descends below.</i>")}
              [terrain]
                  x,y=36,36
                  terrain=Uu
@@ -752,7 +746,7 @@
                                     # the name is intentionally "sword" so that the existing sword animation of the unit will be used
                                     name=sword
                                     description= _ "heavy broadsword"
-                                    icon=attacks/greatsword-human.png
+                                    icon="attacks/greatsword-human.png"
                                     type=blade
                                     range=melee
                                     [specials]
@@ -969,10 +963,20 @@
        name="start"
 
        {CLEAR_FOG 1 45 57 12}
+       [remove_shroud]
+           side=1
+           x,y=45,57
+           radius=12
+       [/remove_shroud]
        {CLEAR_FOG 2 45 57 12}
+       [remove_shroud]
+           side=2
+           x,y=45,57
+           radius=12
+       [/remove_shroud]
        
        {SCROLL_TO 41 65}
-       {DELAY 100}
+       {DELAY 300}
 
        {MOVE_UNIT (id="Jahin_Galleon") 42 57}
 
@@ -1041,7 +1045,7 @@
        [/message]
        [message]
            speaker="Jahin"
-           message= _ "Jalin, let us quickly siege those keeps. It is imperative that we have this port under our control if our main force is to arrive."
+           message= _ "Jalin, let us quickly siege those keeps! It is imperative that we have this port under our control if our main force is to arrive."
        [/message]
        [message]
            speaker="Jalin"
@@ -1062,6 +1066,11 @@
        first_time_only=yes
 
        {CLEAR_FOG 1 59 43 8}
+       [remove_shroud]
+           side=1,2
+           x,y=59,43
+           radius=8
+       [/remove_shroud]
        {FAKE_UNIT_MOVE 45 59 53 43 9 ("Vampiric Blood Dat") ()}
        
        {GENERIC_UNIT 9 "Vampiric Blood Bat" 59 43}
@@ -1157,7 +1166,7 @@
                 description= _ "It would be worth your while to recall as many veterans as possible."
             [/note]
             [note]
-                description= _ "Let Sreeyoshee rest for successive 3 turns and she shall tell you the location of your enemy."
+                description= _ "Let Sreeyoshee rest for 3 successive turns and she shall tell you the location of your enemy."
             [/note]
         [/objectives]
     [/event]
@@ -1209,6 +1218,11 @@
                   {DELAY 100}
 
                   {CLEAR_FOG 1 42 30 2}
+                  [remove_shroud]
+                      side=1,2
+                      x,y=42,30
+                      radius=2
+                  [/remove_shroud]
 
                   {HIGHLIGHT_IMAGE 42 30 "items/gohere.png" "misc/goal-highlight.png"}
 
@@ -1297,7 +1311,7 @@
 
        [message]
            speaker="Rharcyn"
-           message= _ "Accursed blood-sucking vermin, you have tortured my kind long enough! To battle, my brethren!"
+           message= _ "Accursed blood-sucking vermin, you have annoyed my kind long enough! To battle, my brethren!"
        [/message]
 
        {MOVE_UNIT (id="Rharcyn") 48 51}
@@ -1336,7 +1350,7 @@
 
        [message]
            speaker="Jahin"
-           message= _ "Our allies have arrived! Now, let's eliminate the enemy for good! Attack!"
+           message= _ "Our allies have finally arrived! Now, let's eliminate the enemy for good! Attack!"
        [/message]
 
        [message]
@@ -1354,12 +1368,18 @@
     [/event]
 
     # turn 11
-    # main vampire army initiatizes
+    # main vampire army initiatises
 
     [event]
        name="turn 11"
        first_time_only=yes
        {CLEAR_FOG 1 21 23 4}
+       [remove_shroud]
+           side=1,2
+           x,y=21,23
+           radius=4
+       [/remove_shroud]
+       
        {FAKE_UNIT_MOVE 58 21 22 23 8 ("Vampiric Dread Bat") ()}
 
        {SCROLL_TO 21 23}
@@ -1390,7 +1410,7 @@
        {DELAY 500}
        [message] 
           speaker="Silvana"
-          message= _ "Do not mind me asking but who is your leader?"
+          message= _ "Do not mind me asking but, who is your leader?"
        [/message]
        [message]
           speaker="Jahin"
@@ -1398,7 +1418,7 @@
        [/message]
        [message]
           speaker="Silvana"
-          message= _ "You must be a gifted youth for this is the very first time our capital has been assaulted. Leaders such as you are rare and thus, it saddens me to kill one such as you."
+          message= _ "You must be a gifted youth for this is the very first time our capital has been ever assaulted. Leaders such as you are rare and thus, it saddens me to kill one such as you."
        [/message]
        [message]
           speaker="Jahin"
@@ -1500,7 +1520,7 @@
            [then]
               [message]
                   speaker="Jahin"
-                  message= _ "We can't fight the High Methusalem with enemies at our rear. We must kill the leader of the southernmost castle first!"
+                  message= _ "We cannot fight the High Methusalem with enemies at our rear. We must kill the leader of the southernmost castle first!"
               [/message]
            [/then]
        [/if]
