--- a/The_Legend_Begins/scenarios/episode-3/64x_01_Exodus.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/64x_01_Exodus.cfg
@@ -12,7 +12,7 @@
 
     # No story, this is intentional
 
-    {SCENARIO_MUSIC suspense.ogg}
+    {SCENARIO_MUSIC underground.ogg}
 
     [side]
         side=1
@@ -133,7 +133,7 @@
            x,y=10,7
        [/unstore_unit]
 
-       {CLEAR_VARIABLE stored.ashhab,stored.krog}
+       {CLEAR_VARIABLE stored.ashhab,stored.krog,hulks_killed,minions_killed}
        {MODIFY_UNIT (id="Krog") facing se}
 
        [message]
@@ -142,7 +142,7 @@
        [/message]
        [message]
           x,y=11,8
-          message= _ "This is not how I pictured my demise!"
+          message= _ "This is not how I pictured my end!"
        [/message]
 
        [animate_unit]
@@ -218,7 +218,7 @@
                [/filter]
 
                hits=yes
-               text= _ "<i>Lightning!</i>"
+               text= _ "<i>lightning!</i>"
                red=0
                green=0
                blue=255
